remove outdated translations and add new translations

--- a/translations/de.json
+++ b/translations/de.json
@@ -1,195 +1,101 @@
 {
-    "validation-amount-invalid-number": "Menge ist keine gültige Zahl",
-    "transaction-details": "Transaktionsdetails",
-    "confirm": "Bestätigen",
-    "description": "Beschreibung",
-    "amount": "Betrag",
-    "open": "Öffnen",
-    "close-app-title": "Warnung!",
-    "members-active": {
-        "one": "1 Mitglied",
-        "other": "{{count}} Mitglieder",
-        "zero": "Keine Mitglieder"
-    },
-    "chat-name": "Chatname",
-    "phew-here-is-your-passphrase": "Puh, das war anstrengend. Hier ist deine Passphrase. *Notiere sie dir und bewahre sie sicher auf!* Du wirst sie brauchen, um deinen Account wiederherzustellen.",
-    "public-group-topic": "Thema",
-    "chat-settings": "Chat-Einstellungen",
-    "offline": "Offline",
-    "invited": "eingeladen",
+    "about-key-storage-title": "Informationen zur Schlüsselspeicherung",
+    "add-account": "Konto hinzufügen",
+    "add-account-incorrect-password": "Das Passwort scheint falsch zu sein. Geben Sie das Passwort ein, mit dem Sie die App entsperren.",
+    "add-an-account": "Füge ein Konto hinzu",
     "address": "Adresse",
-    "new-public-group-chat": "Öffentlichem Chat beitreten",
+    "amount": "Betrag",
+    "back-up-seed-phrase": "Sichern der Seed-Phrasen",
+    "balance": "Kontostand",
+    "biometric-auth-android-title": "Authentifizierung erforderlich",
+    "biometric-auth-confirm-title": "Sie müssen sich authentifizieren!",
+    "biometric-auth-confirm-try-again": "Versuchen Sie es erneut",
+    "biometric-auth-error": "Biometrische Authentifizierung nicht möglich ( {{code}} )",
+    "change-passcode": "Passcode ändern",
+    "change-password": "Passwort ändern",
+    "chaos-unicorn-day-details": "🦄🦄🦄🦄🦄🦄🦄🚀!",
+    "chat-key": "Chat-Key",
+    "chat-name": "Chatname",
+    "chat-settings": "Chat-Einstellungen",
+    "create-multiaccount": "Multiaccount erstellen",
     "datetime-hour": {
         "one": "Stunde",
         "other": "Stunden"
     },
-    "wallet-settings": "Wallet-Einstellungen",
-    "datetime-ago-format": "{{ago}} {{number}} {{time-intervals}}",
-    "close-app-button": "Bestätigen",
-    "block": "Block",
-    "camera-access-error": "Um den benötigten Kamera-Zugriff zu erlauben, gehe bitte in deine Systemeinstellungen und stelle sicher, dass Status > Kamera ausgewählt ist",
-    "wallet-invalid-address": "Ungültige Adresse: \n {{data}}",
+    "decimals": "Dezimalstellen",
+    "default": "Standard",
+    "delete-and-leave-group": "Gruppe löschen und verlassen",
+    "delete-my-account": "Mein Konto löschen",
+    "dev-mode-settings": "Einstellungen des Entwicklungsmodus",
+    "device-syncing": "Gerätesynchronisierung",
+    "encrypt-with-password": "Mit Passwort verschlüsseln",
+    "ens-chat-settings": "Chat-Einstellungen",
+    "ens-username": "ENS-Benutzername",
+    "enter-address": "Andresse eingeben",
+    "finish": "Fertig",
+    "generating-keys": "Schlüssel werden generiert ...",
+    "history": "VERLAUF",
+    "intro-privacy-policy-note2": "Datenschutzerklärung",
+    "intro-title2": "Sichere Krypto-Wallet",
+    "intro-title3": "Dezentrale Apps",
+    "intro-wizard-title-alt4": "Erstellen Sie ein Passwort",
+    "intro-wizard-title-alt5": "Bestätigen Sie Ihr Passwort",
+    "invited": "eingeladen",
+    "keycard-connected-title": "Verbunden",
+    "keycard-recovery-intro-button-text": "Die Wiederherstellung beginnen",
+    "keycard-recovery-no-key-header": "Es gibt nichts Wiederherstellbares",
+    "language": "Sprache",
+    "les-ulc": "LES\/ULC",
+    "members-active": {
+        "one": "Mitglied",
+        "other": "Mitglieder"
+    },
+    "message-syncing": "Nachrichtensynchronisierung",
+    "mobile-network-go-to-settings": "Zu den Einstellungen gehen",
+    "mobile-network-settings": "Mobile Daten",
+    "mobile-network-use-mobile": "Mobile Daten nutzen",
+    "mobile-network-use-wifi": "Nur Wi-Fi",
+    "multiaccounts-recover-enter-phrase-title": "Geben Sie Ihre Seed-Phrase ein",
+    "name-of-token": "Der Name Ihres Tokens",
+    "new-public-group-chat": "Öffentlichem Chat beitreten",
+    "no-tokens-found": "Keine Token gefunden",
+    "not-keycard-title": "Keine Keycard",
+    "offline": "Offline",
+    "pair-this-card": "Diese Karte koppeln",
+    "paste": "Einfügen",
+    "privacy": "Datenschutz",
+    "privacy-and-security": "Datenschutz und Sicherheit",
+    "public-group-topic": "Thema",
+    "recover-keycard-multiaccount-not-supported": "Die Wiederherstellung des Keycard-Multiaccounts mit Passwort wird nicht unterstützt.",
+    "recover-with-keycard": "Mit Keycard wiederherstellen",
+    "remember-me": "Eingeloggt bleiben",
     "remove": "Entfernen",
-    "add-members": "Mitglieder hinzufügen",
-    "status-sent": "Gesendet",
-    "yes": "Ja",
-    "dapps": "ÐApps",
-    "network-settings": "Netzwerkeinstellungen",
-    "photos-access-error": "Um den benötigten Foto-Zugriff zu erlauben, gehe bitte in deine Systemeinstellungen und stelle sicher, dass Status > Fotos ausgewählt ist",
-    "hash": "Hash",
-    "done": "Erledigt",
-    "delete-chat": "Chat löschen",
-    "new-group-chat": "Neuer Gruppenchat",
-    "wallet": "Wallet",
-    "wallet-request": "Anfragen",
-    "sign-in": "Einloggen",
-    "datetime-yesterday": "Gestern",
-    "create-new-account": "Neues Konto erstellen",
-    "datetime-ago": "vor",
-    "contacts": "Kontakte",
-    "got-it": "Erhalten",
-    "public-chats": "Öffentliche Chats",
-    "not-applicable": "Nicht anwendbar für unsignierte Transaktionen",
-    "active-online": "Online",
-    "password": "Passwort",
-    "send-request": "Anfrage senden",
-    "paste-json": "JSON einfügen",
-    "browsing-title": "Browse",
-    "transactions-history-empty": "Noch keine Transaktionen in deinem Verlauf",
-    "discover": "Entdecken",
-    "browsing-cancel": "Abbrechen",
-    "intro-status": "Chatte mit mir, um deinen Account einzurichten und deine Einstellungen zu ändern.",
-    "name": "Name",
-    "gas-price": "Gaspreis",
-    "validation-amount-is-too-precise": "Menge ist zu präzise. Die kleinste Einheit, die du senden kannst, ist 1 Wei (1x10^-18 ETH)",
-    "copy-transaction-hash": "Transaktions-Hash kopieren",
-    "show-qr": "QR-Code anzeigen",
-    "connect": "Verbinden",
-    "edit": "Bearbeiten",
-    "account-generation-message": "Gib mir eine Sekunde, ich muss wahnsinnig komplizierte Berechnungen tätigen, um deinen Account zu generieren!",
-    "remove-network": "Netzwerk entfernen",
-    "no-messages": "Keine Nachrichten",
-    "passphrase": "Passphrase",
-    "recipient": "Empfänger",
-    "members-title": "Mitglieder",
-    "new-group": "Neue Gruppe",
-    "phone-e164": "International 1",
-    "connected": "Verbunden",
-    "rpc-url": "RPC URL",
-    "settings": "Einstellungen",
-    "specify-rpc-url": "Spezifiziere eine RPC URL",
-    "gas-limit": "Gaslimit",
-    "delete": "Löschen",
-    "chats": "Chats",
-    "transaction-sent": "Transaktion gesendet",
-    "transaction": "Transaktion",
-    "public-group-status": "Öffentlich",
-    "image-source-make-photo": "Aufnehmen",
-    "chat": "Chat",
-    "start-conversation": "Beginne ein Gespräch",
-    "save": "Speichern",
-    "all": "Alle",
-    "confirmations-helper-text": "Bitte warte mindestens 12 Bestätigungen ab, um sicherzustellen, dass deine Transaktion sicher bearbeitet wurde",
-    "sharing-copy-to-clipboard": "In die Zwischenablage kopieren",
-    "sync-in-progress": "Synchronisiere...",
-    "enter-password": "Passwort eingeben",
-    "send-transaction": "Sende Transaktion",
-    "confirmations": "Bestätigungen",
-    "incorrect-code": [
-        "str",
-        "Es tut uns leid, der Code war nicht korrekt, bitte gib ihn erneut ein"
-    ],
-    "image-source-gallery": "Aus Gallerie auswählen",
-    "sync-synced": "Synchronisiert",
-    "currency": "Währung",
-    "status-pending": "Ausstehend",
-    "connecting-requires-login": "Das Verbinden mit einem anderen Netzwerk erfordert eine Anmeldung",
-    "datetime-day": {
-        "one": "Tag",
-        "other": "Tage"
-    },
-    "request-transaction": "Transaktion anfordern",
-    "wallet-send": "Senden",
-    "scan-qr": "Scanne QR-Code",
-    "contact-s": {
-        "one": "Kontakt",
-        "other": "Kontakte"
-    },
-    "gas-used": "Gas verbraucht",
+    "remove-token": "Token entfernen",
+    "security": "Sicherheit",
+    "see-details": "Siehe Details",
+    "send-logs-to": "Einen Fehler an {{email}}} melden",
+    "set-dapp-access-permissions": "Festlegen von DApp-Zugriffsberechtigungen",
+    "share-address": "Adresse teilen",
+    "sign-out": "Ausloggen",
+    "sign-with": "Signiere mit",
+    "specify-address": "Adresse teilen",
+    "submit": "Senden",
+    "symbol": "Symbol",
+    "sync-settings": "Synchronisierungseinstellungen",
+    "this-device": "Dieses Gerät",
+    "this-is-you-signing": "Dies ist Ihre Signaturphrase",
+    "tribute-required-by-multiaccount": "{{multiaccount-name}}} benötigt SNT, um einen Chat zu starten.",
     "type": "Typ",
-    "next": "Weiter",
-    "recent": "Kürzliche Status",
-    "open-on-etherscan": "Auf Etherscan.io öffnen",
-    "share": "Teilen",
-    "status": "Status",
-    "from": "Von",
-    "wrong-password": "Falsches Passwort",
-    "in-contacts": "In Kontakten",
-    "transactions-sign": "Signiere",
-    "sharing-share": "Teilen...",
-    "type-a-message": "Tippe eine Nachricht...",
-    "usd-currency": "USD",
-    "url": "URL",
-    "add-network": "Netzwerk hinzufügen",
-    "unknown-status-go-error": "Unbekannter status-go Fehler",
-    "clear-history": "Verlauf leeren",
-    "no-contacts": "Noch keine Kontakte",
-    "soon": "Bald",
-    "close-app-content": "Die App wird gestoppt und geschlossen. Wenn du sie wieder öffnest, wird das ausgewählte Netzwerk verwendet",
-    "datetime-today": "Heute",
-    "web-view-error": "Ups, Fehler",
-    "error": "Fehler",
-    "more": "mehr",
-    "cancel": "Abbrechen",
-    "can-not-add-yourself": "Du kannst dich nicht selbst hinzufügen",
-    "transaction-description": "Bitte warte mindestens 12 Bestätigungen ab, um sicherzustellen, dass deine Transaktion sicher bearbeitet wurde",
-    "add-to-contacts": "Zu Kontakten hinzufügen",
-    "available": "Verfügbar",
-    "You": "Du",
-    "main-wallet": "Haupt-Wallet",
-    "transactions": "Transaktionen",
-    "members": {
-        "one": "1 Mitglied",
-        "other": "{{count}} Mitglieder",
-        "zero": "Keine Mitglieder"
+    "ulc-enabled": "ULC aktiviert",
+    "unlock": "Freischalten",
+    "unpaired-keycard-text": "Die gewählte Keycard ist nicht mit diesem Telefon verbunden",
+    "unpaired-keycard-title": "Ihre Karte wurde scheinbar nicht gepaart",
+    "waiting-for-wifi-change": "Ändern",
+    "words-n": {
+        "one": "1 Wort",
+        "other": "{{count}} Worte"
     },
-    "intro-message1": "Willkommen bei Status!\nKlicke auf diese Nachricht, um dein Passwort festzulegen und loszulegen.",
-    "eth": "ETH",
-    "transactions-history": "Verlauf",
-    "new-contact": "Neuer Kontakt",
-    "datetime-second": {
-        "one": "Sekunde",
-        "other": "Sekunden"
-    },
-    "recover": "Wiederherstellen",
-    "wallet-total-value": "Gesamter Wert",
-    "nonce": "Nonce",
-    "new-network": "Neues Netzwerk",
-    "datetime-minute": {
-        "one": "Minute",
-        "other": "Minuten"
-    },
-    "browsing-open-in-android-web-browser": "In Webbrowser öffnen",
-    "browsing-open-in-ios-web-browser": "In Webbrowser öffnen",
-    "wallet-insufficient-funds": "Unzureichendes Kapital",
-    "edit-profile": "Profil bearbeiten",
-    "active-unknown": "Unbekannt",
-    "transaction-failed": "Transaktion fehlgeschlagen",
-    "public-key": "Öffentlicher Schlüssel",
-    "profile": "Profil",
-    "wallet-choose-recipient": "Empfänger auswählen",
-    "none": "Nichts",
-    "removed": "entfernt",
-    "no": "Nein",
-    "transactions-filter-select-all": "Alle auswählen",
-    "transactions-filter-title": "Filterverlauf",
-    "message": "Nachricht",
-    "here-is-your-passphrase": "Hier ist deine Passphrase. *Notiere sie dir und bewahre sie sicher auf!* Du wirst sie brauchen, um deinen Account wiederherzustellen.",
-    "wallet-assets": "Assets",
-    "image-source-title": "Profilbild",
-    "current-network": "Aktuelles Netzwerk",
-    "left": "hat die Gruppe verlassen",
-    "to": "An",
-    "data": "Daten",
-    "cost-fee": "Kosten/Gebühren"
+    "wrong-address": "Falsche Adresse",
+    "wrong-keycard-text": "Die gewählte Keycard ist nicht mit diesem Telefon verbunden",
+    "you-will-need-this-code": "Sie benötigen diesen Code, um Status zu öffnen und Transaktionen zu signieren"
 }
