--- a/translations/es_419.json
+++ b/translations/es_419.json
@@ -9,6 +9,7 @@
     "account-added": "Cuenta agregada",
     "account-color": "Color de la cuenta",
     "account-content": "Puedes comparar las cuentas en Status con las cuentas bancarias. Al igual que una cuenta bancaria, una cuenta suele tener una dirección y un saldo; se utiliza esta cuenta para realizar transacciones con Ethereum. Puedes tener varias cuentas en tu billetera. Todas accedidas en Status.",
+    "account-exists-title": "Cuenta ya existe",
     "account-name": "Nombre de la cuenta",
     "account-settings": "Ajustes de la cuenta",
     "account-title": "Cuenta",
@@ -27,8 +28,11 @@
     "add-mailserver": "Agregar mailserver",
     "add-members": "Agregar miembros",
     "add-network": "Agregar red",
+    "add-private-key-account": "Ingresa una cuenta de una llave privada",
+    "add-seed-account": "Agrega una cuenta con una frase  semilla",
     "add-to-contacts": "Agregar a contactos",
     "add-to-contacts-text": "Al agregar un usuario a tu lista de contactos, compartes la dirección de tu billetera",
+    "add-watch-account": "Agrega una cuenta sólo para mirar",
     "address": "Dirección",
     "address-received": "Dirección recibida",
     "address-request-accepted": "Solicitud de dirección aceptada",
@@ -105,7 +109,6 @@
     "browsing-site-blocked-title": "Este sitio está bloqueado",
     "browsing-title": "Navegar",
     "camera-access-error": "Para permitir el acceso a la cámara, porfavor, ve a ajustes de sistema y asegúrate que este seleccionada la opción Status > Cámara",
-    "can-not-add-yourself": "No puedes agregarte a ti mismo",
     "cancel": "Cancelar",
     "cancel-keycard-setup": "Cancelar la configuración de Keycard",
     "cannot-read-card": "No puede leer la tarjeta.\nPor favor, mantenla en la parte posterior de tu teléfono",
@@ -459,9 +462,9 @@
     "gas-price": "Precio del gas",
     "gas-used": "Gas utilizado",
     "generate-a-key": "Generar claves",
-    "generate-a-new-account": "Generar claves",
     "generate-a-new-key": "Generar una nueva clave",
     "generate-account": "Generar claves",
+    "generate-an-account": "Genera una Cuenta",
     "generate-new-key": "Generar claves",
     "generating-codes-for-pairing": "> Descargando el software del producto a la tarjeta \n > Generando códigos de desbloqueo y vinculación",
     "generating-keys": "Generando claves...",
@@ -768,6 +771,7 @@
     "privacy": "Privacidad",
     "privacy-and-security": "Privacidad y seguridad",
     "privacy-policy": "Política de privacidad",
+    "private-key": "Llave privada",
     "processing": "Un momento.",
     "product-information": "Información del Producto",
     "profile": "Perfil",
