--- a/translations/it.json
+++ b/translations/it.json
@@ -9,6 +9,7 @@
     "account-added": "Account aggiunto",
     "account-color": "Colore dell'account",
     "account-content": "Puoi considerare tuoi account in Status come dei conti in banca. Come tali hanno un numero di conto (indirizzo ethereum) e un saldo; puoi usare questi account per effettuare transazioni su Ethereum. Puoi avere più di un account nel tuo portafoglio, tutti accessibili appena fai login in Status.",
+    "account-exists-title": "Questo account esiste già!",
     "account-name": "Nome utente",
     "account-settings": "Impostazioni account",
     "account-title": "Account",
@@ -27,8 +28,11 @@
     "add-mailserver": "Aggiungi mailserver",
     "add-members": "Aggiungi partecipanti",
     "add-network": "Aggiungi rete",
+    "add-private-key-account": "Aggiungi un account usando la tua chiave privata",
+    "add-seed-account": "Aggiungi account usando la tua frase mnemonica",
     "add-to-contacts": "Aggiungi ai contatti",
     "add-to-contacts-text": "Aggiungendo un utente all'elenco dei contatti, condividi l'indirizzo del tuo portafoglio",
+    "add-watch-account": "Aggiungi un account di sola lettura",
     "address": "Indirizzo",
     "address-received": "Indirizzo ricevuto",
     "address-request-accepted": "Richiesta di indirizzo accettata",
@@ -105,7 +109,6 @@
     "browsing-site-blocked-title": "Questo sito è bloccato",
     "browsing-title": "Sfoglia",
     "camera-access-error": "Per concedere l'autorizzazione richiesta per la videocamera, andare alle impostazioni del sistema e assicurarsi che Status > Videocamera sia selezionato.",
-    "can-not-add-yourself": "Non puoi aggiungere te stesso",
     "cancel": "Annulla",
     "cancel-keycard-setup": "Annullare la configurazione della Keycard",
     "cannot-read-card": "Non riesco a leggere la carta.\nPer favore, tienilo sul retro del telefono.",
@@ -460,9 +463,9 @@
     "gas-price": "Prezzo del gas",
     "gas-used": "Gas utilizzato",
     "generate-a-key": "Genera le chiavi",
-    "generate-a-new-account": "Genera le chiavi",
     "generate-a-new-key": "Genera nuove chiavi",
     "generate-account": "Genera le chiavi",
+    "generate-an-account": "Crea un account",
     "generate-new-key": "Genera le chiavi",
     "generating-codes-for-pairing": "> Download del software di prodotto sulla scheda \n > Generazione di codici di sblocco e associazione",
     "generating-keys": "Generazione delle chiavi in corso...",
@@ -550,7 +553,7 @@
     "keycard": "Keycard",
     "keycard-applet-install-instructions": "Per installare l'applet si prega di seguire le istruzioni su https:\/\/github.com\/status-im\/keycard-cli#keycard-applet-installation",
     "keycard-awaiting-description": "Provate a spostare la carta per trovare il lettore NFC sul vostro dispositivo",
-    "keycard-awaiting-title": "Ancora in cerca...",
+    "keycard-awaiting-title": "Sto ancora cercando...",
     "keycard-blocked": "Keycard è stata bloccata. \n È necessario ripristinare la scheda per continuare a utilizzarla.",
     "keycard-cancel-setup-text": "Questa operazione annullerà la configurazione della keycard. Si consiglia vivamente di completare la configurazione per utilizzare la chiave. Vuoi davvero annullare?",
     "keycard-cancel-setup-title": "Operazione pericolosa",
@@ -562,7 +565,7 @@
     "keycard-free-pairing-slots": "La scheda chiave ha {{n}} slot di accoppiamento liberi",
     "keycard-has-multiaccount-on-it": "Questa Keycard contiene già un Multi-Account. Se vuoi cambiarlo fai prima login e poi procedi al reset. Se invece vuoi importare l'account presente, usa \"Aggiungi un Multi-Account esistente\".",
     "keycard-init-description": "Posiziona la carta sul retro del telefono per continuare",
-    "keycard-init-title": "In cerca di carte...",
+    "keycard-init-title": "Cerco le carte...",
     "keycard-onboarding-finishing-header": "Finendo",
     "keycard-onboarding-intro-header": "Conservare le tue chiavi su Keycard",
     "keycard-onboarding-intro-text": "Preparati, potrebbero essere necessari alcuni minuti, ma è importante proteggere il tuo account",
@@ -781,6 +784,7 @@
     "privacy": "Privacy",
     "privacy-and-security": "Privacy e sicurezza",
     "privacy-policy": "Informativa sulla privacy",
+    "private-key": "Chiave privata",
     "processing": "Solo un momento",
     "product-information": "Informazioni sul prodotto",
     "profile": "Profilo",
@@ -1013,6 +1017,7 @@
     "usd-currency": "USD",
     "use-valid-contact-code": "Inserisci o scansiona una chiave chat o un nome utente valido",
     "use-valid-contact-code-desktop": "Inserisci una chiave chat o un nome utente valido",
+    "user-not-found": "Utente non trovato",
     "validation-amount-invalid-number": "L'importo non è valido",
     "validation-amount-is-too-precise": "L'importo è troppo preciso. Il numero massimo di decimali è {{decimals}} .",
     "version": "Versione App",
