--- a/translations/ja.json
+++ b/translations/ja.json
@@ -25,6 +25,7 @@
     "add-members": "メンバーを追加",
     "add-network": "ネットワークを追加",
     "add-to-contacts": "連絡先に追加",
+    "add-watch-account": "読み取り専用アカウントを追加",
     "address": "アドレス",
     "advanced": "詳細",
     "advanced-settings": "高度な設定",
@@ -34,6 +35,7 @@
     "allowing-authorizes-this-dapp": "アクセスを許可すると、このDAppはあなたのウォレットアドレスを取得し、Web3を有効にします。",
     "already-have-asset": "このアセットはすでに持っています",
     "amount": "金額",
+    "apply": "適用する",
     "are-you-sure-description": "二度とリカバリーフレーズ全体を見ることはできません",
     "are-you-sure?": "本当に実行しますか？",
     "ask-in-status": "質問するまたはバグを報告する",
@@ -135,8 +137,6 @@
     "connection-with-the-card-lost-setup-text": "セットアップを再開するにはカードをスマートフォンの背面に当てたままにしてください",
     "connection-with-the-card-lost-text": "セットアップを再開するにはカードをスマートフォンの背面に当てたままにしてください",
     "contact-code": "連絡先コード",
-    "contact-recovery-content": "{{name}}からメッセージが送信されましたが、この端末は含まれていませんでした。 \nこれは、3つ以上のデバイスがある場合、デバイスを正しくペアリングしていない場合、またはマルチアカウントを回復したばかりの場合に発生する可能性があります。 \nデバイスが正しくペアリングされていることを確認し、通知をクリックしてこのデバイスをユーザーに知らせてください。",
-    "contact-recovery-title": "{{name}}からメッセージが送信されました",
     "contact-s": {
         "other": "の連絡先"
     },
@@ -313,7 +313,6 @@
     "ens-displayed-with": "あなたのメッセージは他の人に表示されます",
     "ens-get-name": "ユニバーサルユーザー名を取得",
     "ens-got-it": "わかりました",
-    "ens-locked": "ユーザー名がロックされています。あなたは{{date}}まで手放すことはできません",
     "ens-network-restriction": "Mainnetまたはropstenでのみ利用可能",
     "ens-no-usernames": "接続しているユーザー名がありません",
     "ens-powered-by": "Ethereum Name Servicesを利用しています",
@@ -329,7 +328,7 @@
     "ens-show-username": "チャットで自分のENSユーザー名を表示する",
     "ens-terms-header": "ENSユーザー名登録の規約",
     "ens-terms-point-1": "資金は1年間デポジットされます。あなたのSNTはロックされますが消費はされません。",
-    "ens-terms-point-10": "0x00000000000C2E074eC69A0dFb2997BA6C7d2e1e (ENSレジストリ).",
+    "ens-terms-point-10": "0x314159265dd8dbb310642f98f50c066173c1259b (ENSレジストリ).",
     "ens-terms-point-2": "1年後にENSユーザー名を手放し、デポジットを取り戻すことができます。何もしなければ名前は維持されます。",
     "ens-terms-point-3": "もしStatusがコントラクトをアップグレードするなど、コントラクトの規約が変更された場合はユーザーはデポジット期間に関係なくENS名を手放す権利を持ちます。",
     "ens-terms-point-4": "コントラクトの管理者はあなたがデポジットした資金にアクセスすることはできません。コントラクトは資金を送信元のアドレスに送り返すことしかできません。",
@@ -343,15 +342,15 @@
     "ens-transaction-pending": "トランザクション処理中",
     "ens-understand": "私のウォレットアドレスとユーザー名がバブリっくに紐づけられることを理解しました。",
     "ens-username": "ENSユーザー名",
+    "ens-username-available": "✓このユーザー名は利用可能です！",
     "ens-username-connected": "このユーザー名はあなたが所有しており、あなたのチャットキーと接続されています。",
     "ens-username-hints": "少なくとも4文字のラテン文字、数字、および小文字のみ",
     "ens-username-invalid": "文字と数字のみ",
     "ens-username-owned": "✓このユーザー名はあなたが所有しています。 ",
-    "ens-username-available": "✓このユーザー名は利用可能です！",
-    "ens-username-taken": "ユーザー名はすでに使用されています :(",
+    "ens-username-owned-continue": "続行すると、このユーザー名とあなたの鍵が関連付けられます。",
+    "ens-username-you-can-follow-progress": "ウォレットの取引履歴セクションで進行状況を追うことができます。",
     "ens-usernames": "ENSユーザー名",
     "ens-usernames-details": "他のユーザーが簡単に認識できるユニバーサルユーザー名を登録する",
-    "wallet-address": "ウォレットアドレス",
     "ens-want-custom-domain": "他のドメイン名を所有しています",
     "ens-want-domain": "stateofus.ethのドメインが欲しい",
     "ens-welcome-hints": "ENSユーザー名は長すぎるアドレスを固有のユーザー名に変換します",
@@ -367,6 +366,7 @@
     "ens-your-usernames": "あなたのユーザー名",
     "ens-your-your-name": "あなたのENSユーザー名",
     "enter-12-words": "リカバリーフレーズの12の単語を半角スペースで区切って入力してください",
+    "enter-address": "アドレスを入力",
     "enter-contact-code": "連絡先コードまたはユーザー名を入力",
     "enter-pair-code": "ペアリングコードを入力",
     "enter-pair-code-description": "Keycardのセットアップ中にペアリングコードが表示されました",
@@ -463,7 +463,7 @@
     "intro-wizard-text2": "この名前はStatusにおけるあなたの身分情報です。1度選択すれば変更できません。",
     "intro-wizard-text3": "あなたの鍵はローカルに保存されています。コピーはありません。アクセスできるのはあなただけです。",
     "intro-wizard-text4": "鍵を暗号化し保護する",
-    "intro-wizard-text6": "Statusは新しいメッセージを通知します。通知設定は設定でいつでも変更できます。",
+    "intro-wizard-text6": "指紋を使った署名を有効化してトランザクションの送信と署名を簡単にする",
     "intro-wizard-title-alt4": "パスワードを作成",
     "intro-wizard-title-alt5": "パスワードを確認",
     "intro-wizard-title1": "まず鍵を取得する",
@@ -471,7 +471,7 @@
     "intro-wizard-title3": "鍵の保管場所を選択",
     "intro-wizard-title4": "6桁のコードを作成する",
     "intro-wizard-title5": "コードを確認",
-    "intro-wizard-title6": "通知を有効にする",
+    "intro-wizard-title6": "指紋を有効にする",
     "invalid-format": "無効な形式\n {{format}}の形式である必要があります",
     "invalid-key-confirm": "適用する",
     "invalid-key-content": "{{message}}\nファイルが破損しているため、複数アカウントのデータベースが暗号化できません。回復する方法はありません。キャンセルボタンを押しても何も起こりません。{{erase-multiaccounts-data-button-text}}ボタンを押すと複数アカウントのデータベースは削除され、複数アカウントのロックが解除されます。その場合、複数アカウントのデータは消失します。",
@@ -489,6 +489,7 @@
     "keycard-blocked": "Keycardがブロックされました。\n引き続き使用するにはカードをリセットする必要があります。",
     "keycard-cancel-setup-text": "この操作はKeycardのセットアップをキャンセルします。Keycardを使用するにはセットアップを完了させることを強くお勧めします。本当にキャンセルしますか？",
     "keycard-cancel-setup-title": "危険な操作",
+    "keycard-connected-title": "接続済み",
     "keycard-desc": "Androidのみ。 Keycardが必要です。",
     "keycard-has-multiaccount-on-it": "このカードはすでにマルチアカウントを持っています。変更したい場合はまずログインしてカードをリセットしてください。Keycardのマルチアカウントをインポートする場合は「既存のマルチアカウントを追加」を使用してください。",
     "keycard-onboarding-finishing-header": "完了しています",
@@ -517,6 +518,7 @@
     "keycard-recovery-phrase-confirmation-text": "これを後になって行うことはできません。リカバリーフレーズがなければデバイスを紛失した際にあなたの鍵やそれに紐づくアセットへのアクセスは永遠に失われます。",
     "keycard-recovery-phrase-confirmation-title": "リカバリーフレーズを書き留めましたか?",
     "keycard-recovery-success-header": "鍵のリカバリーに成功しました",
+    "keycard-success-title": "成功",
     "keycard-unauthorized-operation": "この操作を実行する権限がありません。 \n有効なカードをタップしてもう一度やり直してください。",
     "learn-more": "もっと詳しく知る",
     "learn-more-about-keycard": "Keycardについてもっと知る",
@@ -550,11 +552,10 @@
     "mailserver-request-error-title": "メールサーバーリクエストエラー",
     "mailserver-request-retry": "リクエストを再試行する",
     "mailserver-retry": "再試行",
+    "mailserver-title": "メールサーバー",
     "main-currency": "メイン通貨",
     "main-networks": "メインネット",
     "main-wallet": "メインウォレット",
-    "mainnet-is-default-alert-text": "Statusはメインネットで運用中のベータ版です。必要以上の暗号通貨を保管しないこと、信頼できない人とデータを共有しないことに気をつけてください。このアプリの利用によるデータと資産に関するリスクに対してはあなた自身が全責任を負います。",
-    "mainnet-is-default-alert-title": "こんにちは",
     "mainnet-network": "メインネット",
     "make-admin": "管理者にする",
     "members": {
@@ -682,6 +683,7 @@
     "pin-mismatch": "PINが一致しません",
     "pin-retries-left": "あと{{number}}回試行できます",
     "preview-privacy": "プライバシーモードのプレビュー",
+    "privacy": "Transparency",
     "privacy-policy": "プライバシーポリシー",
     "processing": "処理中",
     "product-information": "プロダクト情報",
@@ -719,11 +721,13 @@
     "remind-me-later": "後で知らせる",
     "remove": "削除",
     "remove-from-chat": "チャットから削除",
+    "remove-from-contacts": "連絡先から削除",
     "remove-network": "ネットワークを削除",
     "remove-token": "トークンを削除",
     "removed": "削除されました",
     "repeat-pin": "新しいPINをリピート",
     "report-bug-email-template": "1.問題の説明\n(あなたが望む機能について教えてください。また、バグが発生した場合は何をしてどんなバグが発生したのか、本来の挙動はどうあるべきかなどを簡単に説明してください。) \n\n\n2.再現する手順\n(バグを再現する方法を順を追って説明してください。)\n- アプリを開く\n- …… \n- ◯◯をタップする、など\n\n\n3. 本来の挙動\n(本来何が起こるべきかを説明してください。)\n\n\n4.実際の挙動\n(実際に起こったことを説明してください。)\n\n\n5.問題を実証できるスクリーンショットを添付してください。 \n",
+    "request-feature": "機能をリクエスト",
     "request-transaction": "トランザクションのリクエスト",
     "required-field": "必須のフィールド",
     "resend-message": "再送信",
@@ -743,6 +747,7 @@
     "search": "検索",
     "secret-keys-confirmation-text": "スマートフォンを紛失した場合でもKeycardを使い続けるためにこれが必要になります。",
     "secret-keys-confirmation-title": "コードを書き留めましたか?",
+    "security": "セキュリティ",
     "see-details": "詳細を見る",
     "see-it-again": "もう一度見る",
     "select-chat": "チャットを選択してメッセージを開始する",
@@ -779,7 +784,7 @@
     "show-qr": "QRコードを表示",
     "sign-in": "サインイン",
     "sign-message": "メッセージに署名",
-    "sign-with": " で署名",
+    "sign-with": "で署名",
     "sign-with-password": "パスワードで署名する",
     "sign-you-in": "サインインしています…",
     "signing": "署名中",
@@ -842,7 +847,6 @@
     "transactions": "トランザクション",
     "transactions-filter-select-all": "すべて選択",
     "transactions-filter-title": "履歴をフィルタする",
-    "type": "タイプ",
     "transactions-history": "トランザクション履歴",
     "transactions-history-empty": "トランザクション履歴がまだありません",
     "transactions-sign": "署名",
@@ -877,6 +881,7 @@
     "tribute-to-talk-you-require-snt": "新しくチャットを始める人にはSNTを要求します。",
     "try-again": "再試行する",
     "turn-nfc-on": "続行するにはNFCをオンにしてください",
+    "type": "タイプ",
     "type-a-message": "メッセージを入力...",
     "unable-to-read-this-code": "このコードを読み込めません",
     "unblock-contact": "連絡先のブロックを解除",
@@ -893,7 +898,6 @@
     "use-valid-contact-code-desktop": "有効な連絡先コードまたはユーザー名を入力してください",
     "validation-amount-invalid-number": "金額が正しくありません",
     "validation-amount-is-too-precise": "金額が細かすぎます。小数点以下を{{decimals}}桁以下にしてください。",
-    "version": "バージョン",
     "view-cryptokitties": "CryptoKittiesで表示",
     "view-cryptostrikers": "CryptoStrikersで表示",
     "view-etheremon": "Etheremonで表示",
@@ -905,6 +909,7 @@
     "waiting-for-wifi-change": "変更",
     "waiting-to-sign": "トランザクションへの署名を待っています...",
     "wallet": "ウォレット",
+    "wallet-address": "ウォレットアドレス",
     "wallet-asset": "アセット",
     "wallet-assets": "アセット",
     "wallet-backup-recovery-title": "リカバリーフレーズのバックアップ",
@@ -951,6 +956,7 @@
     "you-are-all-set-description": "これでスマートフォンを紛失してもリカバリーフレーズを使って複数アカウントを回復できます。",
     "you-can-change-account": "アカウント名と色を変更することができます",
     "you-dont-have-stickers": "まだステッカーを持っていません",
+    "you-will-need-this-code": "Statusを開き、トランザクションに署名するにはこのコードが必要です。",
     "your-contact-code": "アクセスを許可すると、このDAppはあなたの連絡先コードを取得します。",
     "your-data-belongs-to-you": "リカバリーフレーズを紛失するとデータや資金が失われます",
     "your-data-belongs-to-you-description": "リカバリーフレーズを紛失した場合、マルチアカウントのリカバリーはできません。あなたのデータのセキュリティの責任はあなたにあります。保護するためにはリカバリーフレーズのバックアップしてください。",
