--- a/translations/ms.json
+++ b/translations/ms.json
@@ -9,18 +9,18 @@
     "add-network": "Tambah rangkaian",
     "add-to-contacts": "Tambah pada senarai kenalan",
     "address": "Address",
+    "advanced": "Lanjutan",
     "advanced-settings": "Tetapan lanjutan",
     "agree-by-continuing": "Dengan meneruskan anda bersetuju dengan ",
     "all": "Semua",
     "allow": "Benarkan",
     "allowing-authorizes-this-dapp": "Membenarkan DApp ini untuk mengambil alamat dompet anda dan mengaktifkan Web3",
     "amount": "Jumlah",
-    "are-you-sure-description": "Anda tidak akan dapat melihat frasa pemulihan semula sekali lagi",
+    "apply": "Memohon",
     "are-you-sure?": "Adakah anda pasti?",
     "ask-in-status": "Tanya soalan atau laporkan pepijat",
     "at": "pada",
     "available": "Ada",
-    "backup-recovery-phrase": "Sandar frasa pemulihan",
     "begin-set-up": "mulakan penyediaan",
     "block": "Blok",
     "bootnode-address": "Alamat Bootnode",
@@ -32,16 +32,15 @@
     "browser-not-secure": "Sambungan tidak selamat! Jangan menandatangani transaksi atau menghantar data peribadi di laman web ini.",
     "browser-secure": "Sambungan adalah selamat. Pastikan anda benar-benar mempercayai laman web ini sebelum menandatangani transaksi atau memasukkan data peribadi.",
     "browsing-cancel": "Batal",
-    "browsing-open-in-status": "Buka dengan Status",
     "browsing-open-in-android-web-browser": "Buka dalam pelayar web",
     "browsing-open-in-ios-web-browser": "Buka dalam pelayar web",
+    "browsing-open-in-status": "Buka dengan Status",
     "browsing-site-blocked-description1": "Kami mengesan aktiviti berniat jahat dari alamat ini. Untuk melindungi anda dan dompet anda, kami menghalang navigasi selanjutnya. \n\nJika anda berpendapat bahawa ini adalah satu kesilapan, beritahu kami di ",
     "browsing-site-blocked-description2": " perbualan umum.",
     "browsing-site-blocked-go-back": "Kembali",
     "browsing-site-blocked-title": "Laman ini disekat",
     "browsing-title": "Pelayar",
     "camera-access-error": "Untuk memberi keizinan akses kamera yang diperlukan, sila pergi ke tetapan sistem anda dan pastikan bahawa Status > Kamera telah dipilih.",
-    "can-not-add-yourself": "Anda tidak boleh menambah diri anda sendiri",
     "cancel": "Batal",
     "change-fleet": "Tukar fleet ke {{fleet}}",
     "change-log-level": "Tukar tahap log ke {{log-level}}",
@@ -51,7 +50,6 @@
     "chat-name": "Nama perbualan",
     "chat-settings": "Tetapan perbualan",
     "chats": "Perbualan",
-    "check-your-recovery-phrase": "Semak frasa pemulihan anda",
     "choose-authentication-method": "Pilih kaedah pengesahan untuk melindungi akaun anda",
     "clear": "Hapus",
     "clear-history": "Padam sejarah perbualan",
@@ -70,8 +68,9 @@
     "connect-mailserver-content": "Sambung ke {{name}}?",
     "connected": "Bersambung",
     "connecting-requires-login": "Menyambung ke rangkaian lain memerlukan daftar masuk",
-    "contact-code": "Kod pengenalan",
-    "contact-s": "{\"other\":\"kenalan\"}",
+    "contact-s": {
+        "other": "kenalan"
+    },
     "contacts": "Kenalan",
     "copy-qr": "Salin kod",
     "copy-transaction-hash": "Salin ID transaksi",
@@ -79,8 +78,6 @@
     "counter-9-plus": "9+",
     "create": "Cipta",
     "create-multiaccount": "Cipta akaun",
-    "create-pin": "Cipta PIN",
-    "create-pin-description": "Anda perlu kad anda + PIN ini untuk mendaftar masuk dan mengesahkan transaksi",
     "cryptokitty-name": "CryptoKitty #{{id}}",
     "currency": "Matawang",
     "currency-display-name-aed": "Dirham Emiriah",
@@ -166,15 +163,22 @@
     "custom": "Pilihan Lain",
     "custom-networks": "Rangkaian lain",
     "dapp": "ÐApp",
-    "dapp-would-like-to-connect-wallet": "ingin \n untuk menyambung ke dompet anda",
     "dapps": "ÐApps",
     "data": "Maklumat",
     "datetime-ago": "lalu",
     "datetime-ago-format": "{{number}} {{time-intervals}} {{ago}}",
-    "datetime-day": "{\"other\":\"hari\"}",
-    "datetime-hour": "{\"other\":\"jam\"}",
-    "datetime-minute": "{\"other\":\"minit\"}",
-    "datetime-second": "{\"other\":\"saat\"}",
+    "datetime-day": {
+        "other": "hari"
+    },
+    "datetime-hour": {
+        "other": "jam"
+    },
+    "datetime-minute": {
+        "other": "minit"
+    },
+    "datetime-second": {
+        "other": "saat"
+    },
     "datetime-today": "hari ini",
     "datetime-yesterday": "semalam",
     "decryption-failed-content": "Kami tidak dapat untuk menyahsulitkan data anda, anda mungkin perlu mencipta akaun baru dan memadamkan data lama anda dengan mengetik \"Pilih\". Klik pada \"Batal\", untuk mencuba lagi",
@@ -204,8 +208,7 @@
     "edit-profile": "Sunting profil",
     "empty-chat-description": "Tiada mesej dalam perbualan ini lagi",
     "empty-chat-description-one-to-one": "Sebarang mesej yang anda hantar disini adalah disulitkan dan hanya boleh dibaca oleh anda dan ",
-    "enter-12-words": "Masukkan 12 perkataan frasa pemulihan anda, dipisahkan oleh ruang tunggal",
-    "enter-contact-code": "Masukkan kod pengenalan atau nama pengguna",
+    "enter-address": "Masukkan address",
     "enter-pair-code": "Masukkan kod pautan",
     "enter-pair-code-description": "Diperlukan untuk memautkan kad anda dengan peranti ini",
     "enter-password": "Masukkan kata laluan",
@@ -233,10 +236,6 @@
     "go-to-settings": "Pergi ke Tetapan",
     "got-it": "Ya",
     "group-chat": "Perbualan kumpulan",
-    "group-chat-created": "*{{member}}* mencipta kumpulan *{{name}}*",
-    "group-chat-member-added": "*{{member}}* menyertai kumpulan",
-    "group-chat-member-removed": "*{{member}}* meninggalkan kumpulan",
-    "group-chat-name-changed": "*{{member}}* mengubah nama kumpulan ke *{{name}}*",
     "group-chat-no-contacts": "Anda belum mempunyai sebarang kenalan. \n Jemput rakan anda untuk mula berbual",
     "group-info": "Maklumat kumpulan",
     "gwei": "Gwei",
@@ -257,14 +256,14 @@
         "str",
         "Maaf kod salah, sila masukkan sekali lagi"
     ],
-    "install": "Pasang",
     "intro-message1": "Selamat datang ke Status\nSila sentuh mesej ini untuk menetapkan kata lalaun & memulakan!",
     "intro-text": "Status adalah pintu gerbang anda ke web yang terdesentralisasi",
     "invalid-key-confirm": "Setuju",
-    "invalid-key-content": "Untuk melindungi diri anda, anda perlu membuat akaun baru dan memadamkan data lama anda dengan mengetik \"Setuju\". Sekiranya anda mempunyai akaun yang sedia ada dan ingin menyimpan frasa pemulihan anda pilih \"Batal\", simpan\/ingatkan\/tuliskannya dan mulakan semula aplikasi. Kami sangat mengesyorkan untuk mencipta akaun baru kerana akaun yang lama disimpan secara tidak dienkripsikan.",
     "invalid-number": "Nombor tidak sah",
     "invite-friends": "Jemput rakan",
     "invited": "dijemput",
+    "keycard-connected-title": "Bersambung",
+    "keycard-success-title": "Berjaya",
     "leave": "Tinggalkan",
     "leave-group": "Tinggalkan kumpulan",
     "left": "pergi",
@@ -277,12 +276,17 @@
     "mailserver-connection-error": "Tidak dapat bersambung ke mailserver",
     "mailserver-details": "Butiran Mailserver",
     "mailserver-reconnect": "Tidak dapat bersambung ke mailserver. Ketik untuk menyambung semula",
+    "mailserver-title": "Mailserver",
     "main-currency": "Matawang utama",
     "main-networks": "Rangkaian utama",
     "main-wallet": "Dompet utama",
     "mainnet-network": "Rangkaian utama",
-    "members": "{\"other\":\"{{count}} ahli\"}",
-    "members-active": "{\"other\":\"{{count}} ahli\"}",
+    "members": {
+        "other": "{{count}} ahli"
+    },
+    "members-active": {
+        "other": "{{count}} ahli"
+    },
     "members-active-none": "tiada ahli",
     "members-title": "Ahli",
     "message": "Mesej",
@@ -321,8 +325,6 @@
     "offline-messaging": "Mailserver",
     "offline-messaging-settings": "Tetapan mailserver",
     "ok": "OK",
-    "ok-continue": "Ok, teruskan",
-    "ok-got-it": "Ok, teruskan",
     "on": "Pada",
     "open": "Buka",
     "open-dapp": "Buka ÐApp",
@@ -339,15 +341,12 @@
     "passphrase": "Ayat pengesahan",
     "password": "Kata laluan",
     "password_error1": "Kata laluan tidak sepadan.",
-    "password-description": "Anda akan memerlukan kata laluan ini untuk membuka aplikasi dan mengesahkan transaksi.",
     "password-placeholder2": "Sahkan kata laluan anda",
     "paste-json": "Tampal JSON",
     "pending": "Belum selesai",
     "permissions": "Kebenaran",
     "phone-e164": "Internasional 1",
     "photos-access-error": "Untuk memberi keizinan akses gambar yang diperlukan, sila pergi ke tetapan sistem anda dan pastikan bahawa Status > Gambar telah dipilih.",
-    "pin-mismatch": "PIN tidak sepadan",
-    "privacy-policy": "Dasar Privasi",
     "profile": "Profil",
     "public-chat": "Perbualan umum",
     "public-chats": "Perbualan umum",
@@ -355,7 +354,6 @@
     "public-group-topic": "Topik",
     "public-key": "Public key",
     "puk-code": "Kod PUK",
-    "puk-code-explanation": "Buka kunci kad jika anda kehilangan akses",
     "receive": "Terima",
     "receive-transaction": "Terima transaksi",
     "recent": "Terbaru",
@@ -363,15 +361,13 @@
     "recipient": "Penerima",
     "recipient-code": "Masukkan alamat penerima",
     "recover": "Pulihkan",
-    "recovery-confirm-phrase": "Sahkan frasa",
-    "recovery-phrase": "Frasa pemulihan",
     "recovery-typo-dialog-description": "Sekiranya anda memasukkan kata-kata yang salah, anda akan membuat akaun baru dan bukannya memulihkan akaun yang lama.",
-    "recovery-typo-dialog-title": "Adakah frasa tersebut tepat?",
     "remove": "Buang",
     "remove-from-chat": "Keluarkan dari perbualan",
+    "remove-from-contacts": "Buang dari senarai kenalan",
     "remove-network": "Padam rangkaian",
     "removed": "dibuang",
-    "repeat-pin": "Ulangi PIN anda",
+    "request-feature": "Mohon ciri",
     "request-transaction": "Minta transaksi",
     "required-field": "Butiran diperlukan",
     "resend-message": "Hantar semula",
@@ -392,14 +388,12 @@
     "send-request-amount": "Jumlah",
     "send-request-amount-max-decimals": "Bilangan maksimum perpuluhan adalah {{asset-decimals}}",
     "send-request-unknown-token": "Token tidak diketahui - {{asset}}",
-    "send-sending-to": "kepada",
     "send-transaction": "Hantar transaksi",
     "sent-at": "Dihantar pada",
     "set-a-topic": "Cipta topik",
     "settings": "Tetapan",
     "share": "Kongsi",
     "share-chat": "Kongsi perbualan",
-    "share-contact-code": "Kongsi kod pengenalan saya",
     "share-dapp-text": "Lihat DApp yang saya gunakan di Status: {{link}}",
     "share-link": "Kongsi pautan",
     "share-my-profile": "Kongsi profil saya",
@@ -411,7 +405,6 @@
     "show-less": "Paparkan dengan kurang",
     "show-more": "Paparkan lagi",
     "show-qr": "Paparkan kod QR",
-    "sign-in": "Daftar masuk",
     "sign-message": "Tandatangan Mesej",
     "sign-you-in": "Mendaftar anda masuk...",
     "soon": "Akan datang",
@@ -425,8 +418,8 @@
     "status": "Status",
     "status-confirmed": "Disahkan",
     "status-hardwallet": "Dompet fizikal Status",
-    "status-not-sent-tap": "Tidak dihantar. Ketik untuk pilihan",
     "status-not-sent-click": "Tidak dihantar",
+    "status-not-sent-tap": "Tidak dihantar. Ketik untuk pilihan",
     "status-pending": "Belum selesai",
     "status-sent": "Dihantar",
     "status-tx-not-found": "Transaksi tidak dijumpai",
@@ -442,7 +435,6 @@
     "token-auto-validate-decimals-error": "Perpuluhan yang salah untuk token {{symbol}} di alamat {{address}} - ditetapkan kepada {{expected}} tetapi dikesan sebagai {{actual}}",
     "token-auto-validate-name-error": "Nama yang salah untuk token {{symbol}} di alamat {{address}} - ditetapkan kepada {{expected}} tetapi dikesan sebagai {{actual}}",
     "token-auto-validate-symbol-error": "Simbol yang salah untuk token {{symbol}} di alamat {{address}} - ditetapkan kepada {{expected}} tetapi dikesan sebagai {{actual}}",
-    "topic-name-error": "Nama topik hanya menggunakan huruf kecil (a hingga z) & sengkang (-)",
     "transaction": "Transaksi",
     "transaction-description": "Transaksi dengan 12 pengesahan boleh dianggap tidak dapat diubah lagi",
     "transaction-details": "Butiran transaksi",
@@ -453,21 +445,18 @@
     "transactions": "Transaksi",
     "transactions-filter-select-all": "Pilih semua",
     "transactions-filter-title": "Tapis sejarah",
-    "type": "Jenis",
     "transactions-history": "Sejarah transaksi",
     "transactions-history-empty": "Tiada transaksi dalam sejarah anda lagi",
     "transactions-sign": "Ditandatangan",
     "turn-nfc-on": "Hidupkan nfc",
+    "type": "Jenis",
     "type-a-message": "Taip mesej...",
     "unable-to-read-this-code": "Tidak dapat membaca kod ini",
     "unknown-status-go-error": "Ralat status-go yang tidak diketahui",
     "url": "URL",
     "usd-currency": "USD",
-    "use-valid-contact-code": "Sila masukkan atau imbas kod pengenalan atau nama pengguna yang sah",
-    "use-valid-contact-code-desktop": "Sila masukkan kod pengenalan atau nama pengguna yang sah",
     "validation-amount-invalid-number": "Jumlah bukan nombor yang sah",
     "validation-amount-is-too-precise": "Jumlah terlalu banyak. Jumlah maksimum perpuluhan adalah {{decimals}} .",
-    "version": "Versi",
     "view-cryptokitties": "Lihat di CryptoKitties",
     "view-cryptostrikers": "Lihat di CryptoStrikers",
     "view-etheremon": "Lihat di Etheremon",
@@ -475,17 +464,14 @@
     "view-profile": "Lihat profil",
     "view-superrare": "Lihat di SuperRare",
     "wallet": "Dompet",
-    "advanced": "Lanjutan",
     "wallet-asset": "Aset",
     "wallet-assets": "Aset",
-    "wallet-backup-recovery-title": "Sandarkan frasa pemulihan anda",
     "wallet-choose-recipient": "Pilih Penerima",
     "wallet-collectibles": "Koleksi",
     "wallet-insufficient-funds": "Kekurangan dana",
     "wallet-insufficient-gas": "Tidak cukup ETH untuk gas",
     "wallet-invalid-address": "Alamat tidak sah: \n {{data}}",
     "wallet-invalid-chain-id": "Rangkaian tidak sepadan: \n {{data}} tetapi rangkaian semasa adalah {{chain}}",
-    "wallet-manage-assets": "Urus Aset",
     "wallet-request": "Permintaan",
     "wallet-send": "Hantar",
     "wallet-send-min-wei": "Min 1 wei",
@@ -496,20 +482,11 @@
     "warning": "Amaran",
     "warning-message": "Maaf, kami menghadkan penghantaran mesej secara berturut-turut untuk mencegah spam. Sila cuba kembali sebentar lagi",
     "web-view-error": "Tidak dapat memuat halaman",
-    "welcome-to-status": "Selamat datang ke Status",
-    "welcome-to-status-description": "Ketik butang tambah (+) untuk bermula",
     "word-n": "Perkataan #{{number}}",
-    "word-n-description": "Untuk memeriksa sama ada anda telah menyandarkan frasa pemulihan anda dengan tepat, masukkan perkataan #{{number}} diatas.",
     "write-down-and-store-securely": "Tuliskan ini dan simpannya dengan selamat",
     "wrong-password": "Kata laluan salah",
     "wrong-word": "Perkataan salah",
     "yes": "Ya",
     "You": "Anda",
-    "you-are-all-set": "Anda telah siap sedia!",
-    "you-are-all-set-description": "Sekarang jika anda kehilangan telefon anda, anda boleh memulihkan akaun dan dompet anda menggunakan frasa pemulihan.",
-    "your-contact-code": "Membenarkan DApp ini untuk mengambil kod pengenalan anda",
-    "your-data-belongs-to-you": "Jika anda kehilangan frasa pemulihan anda, anda kehilangan data dan dana anda",
-    "your-data-belongs-to-you-description": "Status tidak dapat membantu anda memulihkan akaun anda jika anda kehilangan frasa pemulihan. Anda bertanggungjawab terhadap keselamatan data anda, dan menyimpan frasa pemulihan anda dengan selamat adalah perlindungan terbaik.",
-    "your-recovery-phrase": "Frasa pemulihan anda",
-    "your-recovery-phrase-description": "Ini adalah frasa pemulihan anda. Anda menggunakannya untuk membuktikan bahawa ini adalah dompet anda. Anda hanya dapat melihatnya sekali! Tuliskannya pada kertas dan simpan ditempat yang selamat. Anda akan memerlukannya jika anda kehilangan atau memasang semula dompet anda."
+    "you-are-all-set": "Anda telah siap sedia!"
 }
