--- a/translations/ne.json
+++ b/translations/ne.json
@@ -1,28 +1,25 @@
 {
     "about-app": "बारेमा",
-    "account-generation-message": "एकै छिन पर्खिनुहोस्, तपाईंको खाता उत्पन्न गर्न केही कठिन हिसाब गर्दै छु!",
     "active-online": "अनलाइन",
     "active-unknown": "अज्ञात",
     "add": "Tambah",
     "add-bootnode": "Bootnode थप्नुहोस्",
-    "add-existing-account": "अवस्थित खाता थप्नुहोस्",
     "add-mailserver": "Tambah mailserver",
     "add-members": "सदस्यहरु जोड्नुहोस्",
     "add-network": "Tambah rangkaian",
     "add-to-contacts": "सम्पर्कहरुमा जोड्नुहोस्",
     "address": "ठेगाना",
+    "advanced": "Lanjutan",
     "advanced-settings": "Tetapan lanjutan",
     "agree-by-continuing": "Dengan meneruskan anda bersetuju dengan ",
     "all": "सबै",
     "allow": "Benarkan",
     "allowing-authorizes-this-dapp": "Membenarkan DApp ini untuk mengambil alamat dompet anda dan mengaktifkan Web3",
-    "already-have-account": "Saya telah mempunyai akaun",
     "amount": "रकम",
-    "are-you-sure-description": "Anda tidak akan dapat melihat frasa pemulihan semula sekali lagi",
+    "apply": "Setuju",
     "are-you-sure?": "के तपाईँ निश्चित हुनुहुन्छ?",
     "at": "pada",
     "available": "उपलब्ध",
-    "backup-recovery-phrase": "Sandar frasa pemulihan",
     "begin-set-up": "mulakan penyediaan",
     "block": "ब्लक गर्नुहोस्",
     "bootnode-address": "Alamat Bootnode",
@@ -34,16 +31,15 @@
     "browser-not-secure": "Sambungan tidak selamat! Jangan menandatangani transaksi atau menghantar data peribadi di laman web ini.",
     "browser-secure": "Sambungan adalah selamat. Pastikan anda benar-benar mempercayai laman web ini sebelum menandatangani transaksi atau memasukkan data peribadi.",
     "browsing-cancel": "रद्द गर्नुहोस्",
-    "browsing-open-in-status": "स्टेटसमा खोल्नुहोस्",
     "browsing-open-in-android-web-browser": "वेब ब्राउजरमा खोल्ने",
     "browsing-open-in-ios-web-browser": "वेब ब्राउजरमा खोल्ने",
+    "browsing-open-in-status": "स्टेटसमा खोल्नुहोस्",
     "browsing-site-blocked-description1": "Kami mengesan aktiviti berniat jahat dari alamat ini. Untuk melindungi anda dan dompet anda, kami menghalang navigasi selanjutnya. \n\nJika anda berpendapat bahawa ini adalah satu kesilapan, beritahu kami di ",
     "browsing-site-blocked-description2": " perbualan umum.",
     "browsing-site-blocked-go-back": "Kembali",
     "browsing-site-blocked-title": "Laman ini disekat",
     "browsing-title": "ब्राउज",
     "camera-access-error": "कृपया क्यामेरा उपयोग गर्न आवश्यक अनुमति प्रदान गर्न, सिस्टम सेटिङ्ग भित्र गएर स्टेटस > क्यमेरा चयन भएको स्थिति निश्चित गर्नुहोस् ।",
-    "can-not-add-yourself": "आफुले आफुलाइनै जोड्न मिल्दैन",
     "cancel": "रद्द गर्नुहोस्",
     "change-fleet": "Tukar fleet ke {{fleet}}",
     "change-log-level": "Tukar tahap log ke {{log-level}}",
@@ -53,7 +49,6 @@
     "chat-name": "च्याट नाम",
     "chat-settings": "च्याट सेटिङ्गहरु",
     "chats": "च्याटहरु",
-    "check-your-recovery-phrase": "Semak frasa pemulihan anda",
     "choose-authentication-method": "Pilih kaedah pengesahan untuk melindungi akaun anda",
     "clear": "Hapus",
     "clear-history": "इतिहास खाली गर्नुहोस्",
@@ -72,19 +67,16 @@
     "connect-mailserver-content": "Sambung ke {{name}}?",
     "connected": "जडित",
     "connecting-requires-login": "Menyambung ke rangkaian lain memerlukan daftar masuk",
-    "contact-code": "संपर्क कोड",
-    "contact-s": "{\"one\":\"सम्पर्क\",\"other\":\"सम्पर्कहरु\"}",
+    "contact-s": {
+        "one": "सम्पर्क",
+        "other": "सम्पर्कहरु"
+    },
     "contacts": "सम्पर्कहरु",
     "copy-qr": "Salin kod",
     "copy-transaction-hash": "लेनदेन आईडी प्रतिलिपि गर्नुहोस्",
     "cost-fee": "Kos\/Fi",
     "counter-9-plus": "9+",
     "create": "सिर्जना गर्नुहोस्",
-    "create-account": "Cipta akaun",
-    "create-new-account": "नया खाता सिर्जना गर्नुहोस्",
-    "create-pin": "PIN सिर्जना गर्नुहोस्",
-    "create-pin-description": "तपाईंलाई आफ्नो कार्ड + यो पिन लग इन गर्न र लेनदेनको पुष्टि गर्न आवश्यक छ",
-    "creating-your-account": "तपाईंको खाता सिर्जना गर्दै ...",
     "cryptokitty-name": "CryptoKitty # {{id}}",
     "currency": "Matawang",
     "currency-display-name-aed": "Dirham Emiriah",
@@ -170,15 +162,26 @@
     "custom": "Pilihan Lain",
     "custom-networks": "Rangkaian lain",
     "dapp": "ÐApp",
-    "dapp-would-like-to-connect-wallet": "ingin \n untuk menyambung ke dompet anda",
     "dapps": "ÐApps",
     "data": "डाटा",
     "datetime-ago": "पहिले",
     "datetime-ago-format": "{{number}} {{time-intervals}} {{ago}}",
-    "datetime-day": "{\"one\":\"दिन\",\"other\":\"दिन\"}",
-    "datetime-hour": "{\"one\":\"घण्टा\",\"other\":\"घण्टा\"}",
-    "datetime-minute": "{\"one\":\"मिनेट\",\"other\":\"मिनेट\"}",
-    "datetime-second": "{\"one\":\"सेकेन्ड\",\"other\":\"सेकेन्ड\"}",
+    "datetime-day": {
+        "one": "दिन",
+        "other": "दिन"
+    },
+    "datetime-hour": {
+        "one": "घण्टा",
+        "other": "घण्टा"
+    },
+    "datetime-minute": {
+        "one": "मिनेट",
+        "other": "मिनेट"
+    },
+    "datetime-second": {
+        "one": "सेकेन्ड",
+        "other": "सेकेन्ड"
+    },
     "datetime-today": "आज",
     "datetime-yesterday": "हिजो",
     "decryption-failed-content": "Kami tidak dapat untuk menyahsulitkan data anda, anda mungkin perlu mencipta akaun baru dan memadamkan data lama anda dengan mengetik \"Pilih\". Klik pada \"Batal\", untuk mencuba lagi",
@@ -206,8 +209,7 @@
     "edit-profile": "प्रोफाइल सम्पादन",
     "empty-chat-description": "अहिलेसम्म कुनै सन्देशहरू छैनन्",
     "empty-chat-description-one-to-one": "Sebarang mesej yang anda hantar disini adalah disulitkan dan hanya boleh dibaca oleh anda dan ",
-    "enter-12-words": "Masukkan 12 perkataan frasa pemulihan anda, dipisahkan oleh ruang tunggal",
-    "enter-contact-code": "संपर्क कोड वा प्रयोगकर्ता नाम प्रविष्ट गर्नुहोस्",
+    "enter-address": "ठेगान प्रविष्ट गर्ने",
     "enter-pair-code": "Masukkan kod pautan",
     "enter-pair-code-description": "Diperlukan untuk memautkan kad anda dengan peranti ini",
     "enter-password": "Masukkan kata laluan",
@@ -238,7 +240,6 @@
     "hash": "ह्यास",
     "help": "bantuan",
     "help-center": "Pusat Bantuan",
-    "here-is-your-passphrase": "तपाईंको गुप्तवाक्यांश प्रस्तुत छ, *यसलाई लेखेर सुरक्षित राख्नुहोस्* आफ्नो खाता पुनर्स्थापना गर्न यो अति आवश्यक छ ।",
     "hold-card": "pegang kad dibelakang telefon anda",
     "home": "Utama",
     "hooks": "Cangkuk",
@@ -253,15 +254,14 @@
         "str",
         "माफ गर्नुहोस्, त्यो कोड गलत रहेछ, कृपया पुनः प्रविष्ट गर्नुहोस्"
     ],
-    "install": "स्थापना गर्नुहोस्",
     "intro-message1": "स्टेटसमा तपाईंलाई स्वागत छ\nतपाईंको पास्वर्ड सेटअप र सुरुवात गर्नको लागि यो सन्देसमा ट्याप गर्नुहोस् ।",
-    "intro-status": "तपाईंको खाता सेटअप गर्न र सेटिङ्ग बदल्नको लागि म सँग च्याट गर्नुहोस् ।",
     "intro-text": "Status adalah pintu gerbang anda ke web yang terdesentralisasi",
     "invalid-key-confirm": "Setuju",
-    "invalid-key-content": "Untuk melindungi diri anda, anda perlu membuat akaun baru dan memadamkan data lama anda dengan mengetik \"Setuju\". Sekiranya anda mempunyai akaun yang sedia ada dan ingin menyimpan frasa pemulihan anda pilih \"Batal\", simpan\/ingatkan\/tuliskannya dan mulakan semula aplikasi. Kami sangat mengesyorkan untuk mencipta akaun baru kerana akaun yang lama disimpan secara tidak dienkripsikan.",
     "invalid-number": "Nombor tidak sah",
     "invite-friends": "Jemput rakan",
     "invited": "आमन्त्रित",
+    "keycard-connected-title": "जडित",
+    "keycard-success-title": "Berjaya",
     "leave": "Tinggalkan",
     "leave-group": "Tinggalkan kumpulan",
     "left": "बाहिरियो",
@@ -274,12 +274,19 @@
     "mailserver-connection-error": "Tidak dapat bersambung ke mailserver",
     "mailserver-details": "Mailserver विवरणहरू",
     "mailserver-reconnect": "Tidak dapat bersambung ke mailserver. Ketik untuk menyambung semula",
+    "mailserver-title": "Mailserver",
     "main-currency": "मुख्य मुद्रा",
     "main-networks": "मुख्य नेटवर्कहरू",
     "main-wallet": "मुख्य वालेट",
     "mainnet-network": "मुख्य नेटवर्क",
-    "members": "{\"one\":\"१ सदस्य\",\"other\":\"{{count}} सदस्यहरु\"}",
-    "members-active": "{\"one\":\"१ सदस्य\",\"other\":\"{{count}} सदस्यहरु\"}",
+    "members": {
+        "one": "१ सदस्य",
+        "other": "{{count}} सदस्यहरु"
+    },
+    "members-active": {
+        "one": "१ सदस्य",
+        "other": "{{count}} सदस्यहरु"
+    },
     "members-active-none": "tiada ahli",
     "members-title": "सदस्यहरु",
     "message": "सन्देश",
@@ -316,13 +323,10 @@
     "offline-messaging": "Mailserver",
     "offline-messaging-settings": "Tetapan mailserver",
     "ok": "ठिक छ",
-    "ok-continue": "Ok, teruskan",
-    "ok-got-it": "ठीक, यो मिल्यो",
     "on": "Pada",
     "open": "खोल्नुहोस्",
     "open-dapp": "ÐApp खोल्नुहोस्",
     "open-on-etherscan": "Buka pada Etherscan.io",
-    "other-accounts": "अन्य खाताहरू",
     "outgoing": "Keluar",
     "pair-card": "paut kad",
     "pair-code": "जोडा कोड",
@@ -331,16 +335,12 @@
     "passphrase": "गुप्तवाक्यांश",
     "password": "पासवर्ड",
     "password_error1": "Kata laluan tidak sepadan.",
-    "password-description": "Anda akan memerlukan kata laluan ini untuk membuka aplikasi dan mengesahkan transaksi.",
     "password-placeholder2": "आफ्नो पासवर्ड निश्चित गर्नुहोस्",
     "paste-json": "टाँस्नुहोस् JSON",
     "pending": "Belum selesai",
     "permissions": "अनुमतिहरू",
-    "phew-here-is-your-passphrase": "*उफऽऽऽ* त्यो कठिन थियो, तपाईंको गुप्तवाक्यांश प्रस्तुत छ, *यसलाई लेखेर सुरक्षित राख्नुहोस्* आफ्नो खाता पुनर्स्थापना गर्न यो अति आवश्यक छ ।",
     "phone-e164": "अन्तराष्ट्रिय १",
     "photos-access-error": "कृपया फोटो उपयोग गर्न आवश्यक अनुमति प्रदान गर्न, सिस्टम सेटिङ्ग भित्र गएर स्टेटस > फोटो चयन भएको स्थिति निश्चित गर्नुहोस् ।",
-    "pin-mismatch": "पिन मेल खाँदैन",
-    "privacy-policy": "Dasar Privasi",
     "profile": "प्रोफाइल",
     "public-chat": "सार्वजनिक कुराकानी",
     "public-chats": "सार्वजनिक च्याटहरू",
@@ -348,7 +348,6 @@
     "public-group-topic": "विषय",
     "public-key": "सार्वजनिक सांचो",
     "puk-code": "PUK कोड",
-    "puk-code-explanation": "Buka kunci kad jika anda kehilangan akses",
     "receive": "प्राप्त गर्नुहोस्",
     "receive-transaction": "लेनदेन प्राप्त गर्नुहोस्",
     "recent": "भर्खरको",
@@ -356,15 +355,13 @@
     "recipient": "प्रापक",
     "recipient-code": "Masukkan alamat penerima",
     "recover": "पुनर्स्थापना",
-    "recovery-confirm-phrase": "वाक्यांश पुष्टि गर्नुहोस्",
-    "recovery-phrase": "Frasa pemulihan",
     "recovery-typo-dialog-description": "Sekiranya anda memasukkan kata-kata yang salah, anda akan membuat akaun baru dan bukannya memulihkan akaun yang lama.",
-    "recovery-typo-dialog-title": "Adakah frasa tersebut tepat?",
     "remove": "हटाउनुहोस्",
     "remove-from-chat": "च्याटबाट हटाउनुहोस्",
+    "remove-from-contacts": "सम्पर्कहरुबाट हटाउनुहोस्",
     "remove-network": "सञ्जाल हटाउनुहोस्",
     "removed": "हटाइयो",
-    "repeat-pin": "आफ्नो पिन दोहोर्याउनुहोस्",
+    "request-feature": "एउटा सुविधा अनुरोध गर्नुहोस्",
     "request-transaction": "Minta transaksi",
     "required-field": "आवश्यक फिल्ड",
     "resend-message": "Hantar semula",
@@ -384,14 +381,12 @@
     "send-request-amount": "Jumlah",
     "send-request-amount-max-decimals": "Bilangan maksimum perpuluhan adalah {{asset-decimals}}",
     "send-request-unknown-token": "Token tidak diketahui - {{asset}}",
-    "send-sending-to": "kepada",
     "send-transaction": "कारोबार पठाउनुहोस्",
     "sent-at": "मा पठाइएको",
     "set-a-topic": "Cipta topik",
     "settings": "सेटिङ्गहरु",
     "share": "Kongsi",
     "share-chat": "Kongsi perbualan",
-    "share-contact-code": "Kongsi kod pengenalan saya",
     "share-dapp-text": "Lihat DApp yang saya gunakan di Status: {{link}}",
     "share-link": "Kongsi pautan",
     "share-my-profile": "Kongsi profil saya",
@@ -403,7 +398,6 @@
     "show-less": "Paparkan dengan kurang",
     "show-more": "Paparkan lagi",
     "show-qr": "QR देखाउने",
-    "sign-in": "साइन-इन",
     "sign-message": "Tandatangan Mesej",
     "sign-you-in": "Mendaftar anda masuk...",
     "soon": "Akan datang",
@@ -428,7 +422,6 @@
     "test-networks": "परीक्षण नेटवर्कहरू",
     "text-input-disabled": "कृपया एक क्षण प्रतीक्षा गर्नुहोस् ...",
     "to": "तर्फ",
-    "topic-name-error": "Nama topik hanya menggunakan huruf kecil (a hingga z) & sengkang (-)",
     "transaction": "कारोबार",
     "transaction-description": "Transaksi dengan 12 pengesahan boleh dianggap tidak dapat diubah lagi",
     "transaction-details": "लेनदेन विवरणहरू",
@@ -439,38 +432,32 @@
     "transactions": "Transaksi",
     "transactions-filter-select-all": "Pilih semua",
     "transactions-filter-title": "Tapis sejarah",
-    "type": "Jenis",
     "transactions-history": "Sejarah transaksi",
     "transactions-history-empty": "तपाईको इतिहासमा अझै कुनै लेनदेन छैन",
     "transactions-sign": "Ditandatangan",
     "turn-nfc-on": "Hidupkan nfc",
+    "type": "Jenis",
     "type-a-message": "सन्देश टाइप गरौं ॰॰॰",
     "unable-to-read-this-code": "यो कोड पढ्न असमर्थ",
     "unknown-status-go-error": "Ralat status-go yang tidak diketahui",
     "url": "URL",
     "usd-currency": "USD",
-    "use-valid-contact-code": "Sila masukkan atau imbas kod pengenalan atau nama pengguna yang sah",
-    "use-valid-contact-code-desktop": "कृपया मान्य सम्पर्क कोड वा प्रयोगकर्ता नाम प्रविष्ट गर्नुहोस्",
     "validation-amount-invalid-number": "राशि वैध संख्या होइन",
     "validation-amount-is-too-precise": "Jumlah terlalu banyak. Jumlah maksimum perpuluhan adalah {{decimals}} .",
-    "version": "Version",
     "view-cryptokitties": "CryptoKitties मा हेर्नुहोस्",
     "view-cryptostrikers": "Lihat di CryptoStrikers",
     "view-etheremon": "Etheremon मा हेर्नुहोस्",
     "view-profile": "Lihat profil",
     "view-superrare": "Lihat di SuperRare",
     "wallet": "वालेट",
-    "advanced": "Lanjutan",
     "wallet-asset": "Aset",
     "wallet-assets": "Aset",
-    "wallet-backup-recovery-title": "Sandarkan frasa pemulihan anda",
     "wallet-choose-recipient": "Pilih Penerima",
     "wallet-collectibles": "Koleksi",
     "wallet-insufficient-funds": "Kekurangan dana",
     "wallet-insufficient-gas": "Tidak cukup ETH untuk gas",
     "wallet-invalid-address": "अवैध ठेगाना: \n {{data}}",
     "wallet-invalid-chain-id": "Rangkaian tidak sepadan: \n {{data}} tetapi rangkaian semasa adalah {{chain}}",
-    "wallet-manage-assets": "Urus Aset",
     "wallet-request": "अनुरोध",
     "wallet-send": "Hantar",
     "wallet-send-min-wei": "Min 1 wei",
@@ -480,20 +467,11 @@
     "wants-to-access-profile": "ingin mengakses profil anda",
     "warning-message": "Maaf, kami menghadkan penghantaran mesej secara berturut-turut untuk mencegah spam. Sila cuba kembali sebentar lagi",
     "web-view-error": "ओहोऽऽऽ, त्रुटि",
-    "welcome-to-status": "Selamat datang ke Status",
-    "welcome-to-status-description": "Ketik butang tambah (+) untuk bermula",
     "word-n": "Perkataan #{{number}}",
-    "word-n-description": "Untuk memeriksa sama ada anda telah menyandarkan frasa pemulihan anda dengan tepat, masukkan perkataan #{{number}} diatas.",
     "write-down-and-store-securely": "Tuliskan ini dan simpannya dengan selamat",
     "wrong-password": "गलत पासवर्ड",
     "wrong-word": "गलत शब्द",
     "yes": "हो",
     "You": "तपाईं",
-    "you-are-all-set": "Anda telah siap sedia!",
-    "you-are-all-set-description": "Sekarang jika anda kehilangan telefon anda, anda boleh memulihkan akaun dan dompet anda menggunakan frasa pemulihan.",
-    "your-contact-code": "Membenarkan DApp ini untuk mengambil kod pengenalan anda",
-    "your-data-belongs-to-you": "Jika anda kehilangan frasa pemulihan anda, anda kehilangan data dan dana anda",
-    "your-data-belongs-to-you-description": "Status tidak dapat membantu anda memulihkan akaun anda jika anda kehilangan frasa pemulihan. Anda bertanggungjawab terhadap keselamatan data anda, dan menyimpan frasa pemulihan anda dengan selamat adalah perlindungan terbaik.",
-    "your-recovery-phrase": "Frasa pemulihan anda",
-    "your-recovery-phrase-description": "Ini adalah frasa pemulihan anda. Anda menggunakannya untuk membuktikan bahawa ini adalah dompet anda. Anda hanya dapat melihatnya sekali! Tuliskannya pada kertas dan simpan ditempat yang selamat. Anda akan memerlukannya jika anda kehilangan atau memasang semula dompet anda."
+    "you-are-all-set": "Anda telah siap sedia!"
 }
