--- a/translations/nl.json
+++ b/translations/nl.json
@@ -1,130 +1,213 @@
 {
-    "confirm": "Bevestigen",
-    "amount": "Bedrag",
-    "members-active": {
-        "one": "1 lid, 1 actieve",
-        "other": "{{count}} leden, {{count}} actieve",
-        "zero": "geen leden"
+    "about-key-storage-title": "Over sleutelopslag",
+    "account-added": "Account toegevoegd",
+    "account-color": "Account kleur",
+    "account-name": "Accountnaam",
+    "account-settings": "Account instellingen",
+    "accounts": "Accounts",
+    "add-account": "Account toevoegen",
+    "add-account-description": "U kunt elk type Ethereum-account importeren om het aan uw Status-wallet toe te voegen",
+    "add-account-incorrect-password": "Wachtwoord lijkt onjuist te zijn. Voer het wachtwoord in dat u gebruikt om de app te ontgrendelen.",
+    "add-an-account": "Een account toevoegen",
+    "add-custom-token": "Aangepaste token toevoegen",
+    "add-to-contacts-text": "Door een gebruiker toe te voegen aan uw contactpersonenlijst, deelt u uw wallet-adres met hen.",
+    "add-watch-account": "Voeg een watch-only account toevoegen",
+    "advanced": "Gevorderd",
+    "already-have-asset": "U heeft dit al.",
+    "authorize": "Machtigen",
+    "back-up-seed-phrase": "Seed-zin",
+    "back-up-your-seed-phrase": "Een back-up maken van je Seed-zin",
+    "balance": "Balans",
+    "biometric-auth-android-sensor-desc": "Aanraaksensor",
+    "biometric-auth-android-sensor-error-desc": "Mislukt",
+    "biometric-auth-android-title": "Verificatie vereist",
+    "biometric-auth-confirm-logout": "log opnieuw in",
+    "biometric-auth-confirm-message": "Biometrische authenticatie is vereist om door te gaan. Meld u opnieuw aan met het multi-account wachtwoord",
+    "biometric-auth-confirm-title": "U moet verifiëren!",
+    "biometric-auth-confirm-try-again": "Probeer opnieuw",
+    "biometric-auth-error": "Kan geen biometrische verificatie uitvoeren ({{code}})",
+    "biometric-auth-login-error-title": "Biometrische authenticatiefout",
+    "biometric-auth-login-ios-fallback-label": "Voer wachtwoord in",
+    "biometric-auth-reason-login": "Inloggen in Status",
+    "biometric-auth-reason-verify": "Verificatie verifiëren",
+    "blank-keycard-text": "U kunt pas doorgaan met uw keycard nadat u uw sleutels en naam hebt gegenereerd",
+    "blank-keycard-title": "Het lijkt erop dat je met een lege keycard hebt getikt. ",
+    "cancel-keycard-setup": "Keycard aanmaken annuleren.",
+    "cannot-read-card": "Kan kaart niet lezen.\nHoud het tegen de achterkant van uw telefoon",
+    "change-passcode": "Toegangscode wijzigen",
+    "change-password": "Wachtwoord wijzigen",
+    "chat-key": "Genereer een chat-sleutel",
+    "clear-all": "Alles wissen",
+    "connection-with-the-card-lost": "Verbinding met kaart verloren.",
+    "connection-with-the-card-lost-setup-text": "Om met de installatie verder te gaan houdt u de kaart tegen de achterkant van uw telefoon en zorgt u ervoor dat de kaart in contact blijft met uw telefoon.",
+    "connection-with-the-card-lost-text": "Om verder te gaan houdt u de kaart tegen de achterkant van uw telefoon.",
+    "contract-address": "Contract adres",
+    "contract-interaction": "Contract interactie",
+    "create-multiaccount": "Multiaccount maken",
+    "custom-seed-phrase": "Aangepaste seed-zin",
+    "custom-seed-phrase-text-2": "Sommige woorden zijn verkeerd gespeld.",
+    "decimals": "Decimalen",
+    "default": "Standaard",
+    "delete-and-leave-group": "Groep verwijderen en verlaten",
+    "delete-my-account": "Mijn account verwijderen",
+    "dev-mode-settings": "Instellingen ontwikkelingsmodus",
+    "device-syncing": "Apparaat synchroniseren",
+    "dismiss": "Negeren",
+    "encrypt-with-password": "Versleutel met wachtwoord",
+    "ens-10-SNT": "10 SNT",
+    "ens-add-username": "Gebruikersnaam toevoegen",
+    "ens-agree-to": "Ga akkoord met ",
+    "ens-chat-settings": "Gespreksinstellingen",
+    "ens-custom-domain": "Aangepast domein",
+    "ens-custom-username-hints": "Typ de volledige gebruikersnaam inclusief het aangepaste domein zoals:\ngebruikersnaam.domein.eth",
+    "ens-custom-username-taken": "Gebruikersnaam is niet van jou :(",
+    "ens-deposit": "Storting",
+    "ens-displayed-with": "Uw berichten worden weergegeven aan anderen met",
+    "ens-get-name": "Een universele gebruikersnaam aanvragen",
+    "ens-got-it": "OK ik snap het",
+    "ens-no-usernames": "U heeft geen gebruikersnaam geconnecteerd.",
+    "ens-powered-by": "Mogelijk gemaakt door Ethereum Name Services",
+    "ens-primary-username": "Primaire gebruikersnaam",
+    "ens-register": "Registreren",
+    "ens-registration-failed": "Probeer het opnieuw om de gebruikersnaam te registreren.",
+    "ens-registration-failed-title": "Transactie mislukt",
+    "ens-release-username": "Gebruikersnaam vrijgeven",
+    "ens-remove-hints": "Door deze te verwijderen zal de gebruikernaam ontkoppeld worden van de sleutel.",
+    "ens-remove-username": "Gebruikersnaam verwijderen",
+    "ens-saved-title": "Gebruikersnaam toegevoegd",
+    "ens-show-username": "Toon mijn ENS-gebruikersnaam in chats",
+    "ens-terms-header": "Voorwaarden voor naamregistratie",
+    "ens-terms-point-1": "Fondsen worden 1 jaar vastgehouden. Uw SNT-tokens worden geblokkeerd, maar zijn niet gespendeerd.",
+    "ens-terms-point-2": "Na 1 jaar kunt u de naam vrijgeven en uw aanbetaling terugkrijgen of geen actie ondernemen om de naam te behouden.",
+    "ens-terms-point-3": "Als voorwaarde om het contract te wijzigen — bijvoorbeeld Status voert contract upgrades uit — dan heeft de gebruiker het recht om de gebruikersnaam vij te geven ongeacht de vastgehouden tijd.",
+    "ens-terms-point-4": "De contractbeheerder heeft geen toegang tot uw gestorte bedragen. Ze kunnen alleen terug worden gestuurd naar het originele adres die ze heeft verzonden",
+    "ens-terms-point-5": "Uw adres(sen) zullen openbaar worden geassocieerd met uw ENS naam.",
+    "ens-terms-point-6": "Gebruikersnamen worden gemaakt als subdomeinknooppunten van stateofus.eth en zijn onderworpen aan de slimme contractvoorwaarden van ENS.",
+    "ens-terms-point-7": "U machtigt het contract om SNT namens u over te dragen. Dit kan alleen gebeuren als u een transactie goedkeurt om de overdracht te autoriseren.",
+    "ens-terms-point-8": "Deze voorwaarden worden gegarandeerd door de slimme contractlogica op adressen:",
+    "ens-terms-point-9": "{{address}} (Status GebruikersnaamRegistrar)",
+    "ens-terms-registration": "Voorwaarden voor naamregistratie",
+    "ens-test-message": "Hallo",
+    "ens-transaction-pending": "Transactie in behandeling ...",
+    "ens-understand": "Ik begrijp dat mijn portemonnee-adres openbaar zal worden gekoppeld aan mijn gebruikersnaam.",
+    "ens-username": "ENS gebruikersnaam",
+    "ens-username-available": "✓ Gebruikersnaam beschikbaar!",
+    "ens-username-hints": "Minstens 4 tekens. Latijnse letters, cijfers en kleine letters.",
+    "ens-username-owned": "✓ Gebruikersnaam is eigendom van jou.",
+    "ens-username-you-can-follow-progress": "U kunt de voortgang opvolgen in de Transactiegeschiedenis van uw wallet.",
+    "ens-usernames": "ENS gebruikersnamen",
+    "ens-usernames-details": "Registreer een universele gebruikersnaam om gemakkelijk door andere gebruikers te worden herkend",
+    "ens-want-custom-domain": "Ik bezit een naam op een ander domein",
+    "ens-want-domain": "Ik wil een stateofus.eth domein",
+    "ens-welcome-hints": "ENS-namen transformeren die waanzinnige adressen in unieke gebruikersnamen.",
+    "ens-welcome-point-1": "Uw complexe portefeuille-adres (0x ...) wordt een gemakkelijk te lezen, onthouden en delen URL:",
+    "ens-welcome-point-1-title": "Vereenvoudig uw ETH-adres",
+    "ens-welcome-point-2": "Registreer éénmaal om de naam voor altijd te behouden. Na 1 jaar kunt u de naam terug vrijgeven en uw SNT terugkrijgen.",
+    "ens-welcome-point-2-title": "10 SNT om te registreren",
+    "ens-welcome-point-3": "Deel uw naam om te chatten op Status of om ETH en tokens te ontvangen",
+    "ens-welcome-point-3-title": "Connecteer en wordt betaald.",
+    "ens-welcome-point-4": "In de volgende stappen kunt u uw eigen gebruikersnamen verifiëren en toevoegen.",
+    "ens-welcome-point-4-title": "Heeft u al een gebruikersnaam?",
+    "ens-your-username": "Uw gebruikersnaam",
+    "ens-your-usernames": "Uw gebruikersnamen",
+    "ens-your-your-name": "Uw ENS-naam",
+    "enter-your-code": "Geef uw 6-cijferige code in.",
+    "enter-your-password": "Geef uw wachtwoord in.",
+    "etherscan-lookup": "Opzoeken op Etherscan",
+    "export-account": "Account exporteren",
+    "finish": "Voltooien",
+    "generating-keys": "Sleutels genereren....",
+    "history": "Geschiedenis",
+    "intro-privacy-policy-note2": "privacybeleid",
+    "intro-title2": "Beveilig uw crypto portemonnee",
+    "intro-title3": "Gedecentraliseerde apps",
+    "intro-wizard-title-alt4": "Maak een wachtwoord aan",
+    "intro-wizard-title-alt5": "Bevestig uw wachtwoord",
+    "key": "Sleutel",
+    "keycard-cancel-setup-text": "Hiermee wordt de installatie van de keycard geannuleerd. Het wordt ten zeerste aanbevolen om de installatie te voltooien om de keycard te gebruiken. Wil je echt annuleren?",
+    "keycard-cancel-setup-title": "Gevaarlijke handeling.",
+    "keycard-has-multiaccount-on-it": "Deze kaart heeft al een multi-account. Als je dit wilt veranderen, log dan eerst in en reset je kaart. Als u een keycard multi-account wilt importeren, gebruik dan \"Bestaand multi-account toevoegen\"",
+    "keycard-onboarding-finishing-header": "Afronden",
+    "keycard-onboarding-intro-text": "Hou je klaar, dit kan enkele minuten duren maar het is belangrijk om uw account goed te beveiligen.",
+    "keycard-onboarding-pairing-header": "Kaart aan het koppelen...",
+    "keycard-onboarding-preparing-header": "Kaart aan het voorbereiden...",
+    "keycard-onboarding-puk-code-header": "Schrijf deze codes op en bewaar ze veilig.",
+    "keycard-onboarding-start-header": "Houdt de kaart tegen de achterkant van uw telefoon om te starten.",
+    "keycard-onboarding-start-step1": "Maak een toegangscode aan.",
+    "keycard-onboarding-start-step2": "Schrijf de PUK en koppelcode op.",
+    "keycard-onboarding-start-step2-text": "Duurt ongeveer 1 minuut. U zal een potlood en een stuk papier nodig hebben voor deze stap.",
+    "keycard-onboarding-start-step3": "Maak een back-up van de seed-zin.",
+    "keycard-onboarding-start-step3-text": "Duurt ongeveer 1 minuut. U zal een potlood en een stuk papier nodig hebben.",
+    "keycard-onboarding-start-text": "Houdt de kaart in contact met de telefoon tijdens de installatie. Deze zal ongeveer 4 minuten duren.",
+    "keycard-recovery-intro-button-text": "Start herstellen",
+    "keycard-recovery-no-key-header": "Hier is niet om te herstellen.",
+    "keycard-recovery-phrase-confirmation-title": "Heeft u de seed-zin genoteerd?",
+    "language": "Taal",
+    "learn-more-about-keycard": "Meer informatie over Keycard",
+    "les-ulc": "LES \/ ULC",
+    "message-syncing": "Berichten synchroniseren",
+    "might-break": "Kan sommige ÐApps breken",
+    "mobile-network-use-wifi": "Enkel Wi-Fi",
+    "multiaccounts-recover-enter-phrase-title": "Geef uw Seed-zin in.",
+    "name-of-token": "De naam van uw token",
+    "network-fee": "Netwerkkosten",
+    "no-collectibles": "Geen Collectibles beschikbaar",
+    "no-tokens-found": "Geen tokens gevonden",
+    "node-version": "Node-versie",
+    "not-keycard-text": "De kaart die u hebt gebruikt, is geen Keycard. U moet een Keycard aanschaffen om deze te kunnen gebruiken.",
+    "not-keycard-title": "Geen keycard",
+    "open-nfc-settings": "NFC-instellingen openen",
+    "pair-this-card": "Deze kaart koppelen",
+    "paste": "Plakken",
+    "preview-privacy": "Voorbeeld van de privacymodus",
+    "privacy": "Privacy",
+    "privacy-and-security": "Privacy en beveiliging",
+    "profile-details": "Profiel",
+    "recover-keycard-multiaccount-not-supported": "Het herstellen van een keycard multi-account met wachtwoord wordt niet ondersteund",
+    "recover-with-keycard": "Herstellen met Keycard",
+    "remember-me": "Mij onthouden",
+    "remove-from-contacts-text": "Door een gebruiker uit uw contactpersonenlijst te verwijderen, verbergt u uw wallet-adres niet voor hen.",
+    "remove-token": "Token verwijderen",
+    "report-bug-email-template": "1. Probleemomschrijving \n (Beschrijf de functie die u wilt, of vat de bug kort samen en wat u deed, wat u had verwacht en wat er daadwerkelijk gebeurde. Secties hieronder) \n\n\n 2. Stappen om te reproduceren \n (Beschrijf hoe we de bug stap voor stap kunnen repliceren.) \n -Open Status \n -... \n -Stap 3, etc. \n\n\n 3. Verwacht gedrag \n (Beschrijf wat u had verwacht.) \n\n\n 4. Feitelijk gedrag \n (Beschrijf wat er echt is gebeurd.) \n\n\n 5. Voeg screenshots toe die het probleem kunnen demonstreren \n",
+    "retry": "opnieuw proberen",
+    "security": "Veiligheid",
+    "select-chat": "Selecteer gesprek",
+    "send-logs-to": "Een bug rapporteren aan {{email}}",
+    "sending": "Bezig met verzenden",
+    "set-dapp-access-permissions": "DApp-toegangsrechten instellen",
+    "share-address": "Adres delen",
+    "sign-out": "Afmelden",
+    "sign-with": "Ondertekenen met",
+    "sign-with-password": "Ondertekenen met wachtwoord",
+    "signing-a-message": "Een bericht ondertekenen",
+    "signing-phrase": "Ondertekeningszin",
+    "specify-address": "Adres opgeven",
+    "submit": "Bevestigen",
+    "symbol": "Symbool",
+    "sync-settings": "Synchronisatie-instellingen",
+    "this-device": "Dit apparaat",
+    "this-is-you-signing": "Dit is uw seed-zin.",
+    "to-encrypt-enter-password": "Voer uw wachtwoord in om uw account te coderen.",
+    "token-details": "Token Details",
+    "tribute-to-talk-tribute-received1": "Eerbetoon ontvangen. Jij en",
+    "tribute-to-talk-tribute-received2": "zijn nu contacten en kunnen veilig met elkaar chatten.",
+    "ulc-enabled": "ULC ingeschakeld",
+    "unlock": "Ontgrendelen",
+    "unpaired-keycard-text": "De Keycard waarop u tikte, is niet aan deze telefoon gekoppeld",
+    "unpaired-keycard-title": "Het lijkt erop dat je kaart niet is gekoppeld",
+    "update": "Update",
+    "view-signing": "Ondertekeningszin bekijken",
+    "wallet-address": "Wallet-adres",
+    "welcome-screen-text": "Stel uw wallet in, nodig vrienden uit om te chatten en blader door de populaire dapps.",
+    "words-n": {
+        "one": "woord",
+        "other": "woorden"
     },
-    "chat-name": "Chatnaam",
-    "phew-here-is-your-passphrase": "*Foei* dat was moeilijk, hier is jouw wachtzin, *schrijf deze op en bewaar hem goed!* Je zult hem nodig hebben om jouw account te herstellen.",
-    "public-group-topic": "Onderwerp",
-    "chat-settings": "Chatinstellingen",
-    "offline": "Offline",
-    "invited": "uitgenodigd",
-    "address": "Adres",
-    "new-public-group-chat": "Neem deel in publieke chat",
-    "datetime-hour": {
-        "one": "uur",
-        "other": "uren"
-    },
-    "camera-access-error": "Om cameratoegang te geven, ga je naar systeem instellingen en zorg je dat Status > Camera geselecteerd is.",
-    "remove": "Verwijderen",
-    "add-members": "Voeg leden toe",
-    "photos-access-error": "Om fototoegang te geven, ga je naar systeem instellingen en zorg je dat Status > Foto's geselecteerd is.",
-    "done": "Klaar",
-    "delete-chat": "Verwijder chat",
-    "new-group-chat": "Nieuwe groepchat",
-    "sign-in": "Meld aan",
-    "datetime-yesterday": "gisteren",
-    "create-new-account": "Maake een nieuwe account aan",
-    "datetime-ago": "geleden",
-    "contacts": "Contactpersonen",
-    "got-it": "Got it",
-    "active-online": "Online",
-    "password": "Wachtwoord",
-    "browsing-title": "Browse",
-    "discover": "Ontdekking",
-    "browsing-cancel": "Annuleren",
-    "intro-status": "Chat met me om jouw account in te stellen en jouw instellingen te wijzigen!",
-    "name": "Naam",
-    "show-qr": "Toon QR",
-    "connect": "Verbinden",
-    "edit": "Bewerken",
-    "account-generation-message": "Geef me een moment, ik moet wat ingewikkelde berekeningen doen om jouw account aan te maken!",
-    "no-messages": "Geen berichten",
-    "passphrase": "Wachtzin",
-    "recipient": "Ontvanger",
-    "members-title": "Leden",
-    "new-group": "Nieuwe groep",
-    "phone-e164": "International 1",
-    "settings": "Instellingen",
-    "delete": "Delete",
-    "chats": "Chats",
-    "transaction": "Transactie",
-    "public-group-status": "Publiek",
-    "image-source-make-photo": "Foto nemen",
-    "start-conversation": "Begin een gesprek",
-    "save": "Opslaan",
-    "sharing-copy-to-clipboard": "Kopieer naar klembord",
-    "sync-in-progress": "Wordt gesynchroniseerd...",
-    "send-transaction": "Verstuur een transactie",
-    "incorrect-code": [
-        "str",
-        "Sorry, de code was onjuist, voer hem opnieuw in"
-    ],
-    "image-source-gallery": "Kies uit galerij",
-    "sync-synced": "Gesynchroniseerd",
-    "status-pending": "Hangende",
-    "datetime-day": {
-        "one": "dag",
-        "other": "dagen"
-    },
-    "scan-qr": "QR scannen",
-    "contact-s": {
-        "one": "contact",
-        "other": "contacten"
-    },
-    "next": "Volgende",
-    "recent": "Recent",
-    "status": "Status",
-    "from": "Van",
-    "wrong-password": "Verkeerd wachtwoord",
-    "in-contacts": "In contacts",
-    "sharing-share": "Deel...",
-    "type-a-message": "Typ een bericht...",
-    "clear-history": "Wis geschiedenis",
-    "no-contacts": "Nog geen contactpersonen",
-    "datetime-today": "vandaag",
-    "web-view-error": "oeps, fout",
-    "error": "Error",
-    "more": "more",
-    "cancel": "Annuleren",
-    "can-not-add-yourself": "Je kunt niet zelf toevoegen",
-    "add-to-contacts": "Aan contactpersonen toevoegen",
-    "available": "Beschikbaar",
-    "You": "Jou",
-    "main-wallet": "Hoofdportemonnee",
-    "members": {
-        "one": "1 lid",
-        "other": "{{count}} leden",
-        "zero": "geen leden"
-    },
-    "intro-message1": "Welkom bij Status\nTik op dit bericht om jouw wachtwoord in te stellen en aan de slag te gaan!",
-    "new-contact": "Nieuwe contactpersonen",
-    "datetime-second": {
-        "one": "seconde",
-        "other": "seconden"
-    },
-    "recover": "Herstellen",
-    "datetime-minute": {
-        "one": "minuut",
-        "other": "minuten"
-    },
-    "browsing-open-in-android-web-browser": "Open in een web browser",
-    "browsing-open-in-ios-web-browser": "Open in een web browser",
-    "edit-profile": "Bewerk profiel",
-    "active-unknown": "Onbekend",
-    "public-key": "Openbare sleutel",
-    "profile": "Profiel",
-    "none": "Geen",
-    "removed": "verwijderd",
-    "message": "Bericht",
-    "here-is-your-passphrase": "Hier is jouw wachtzin, *schrijf deze op en bewaar hem goed!* Je zult hem nodig hebben om jouw account te herstellen.",
-    "image-source-title": "Profielfoto",
-    "current-network": "Huidige netwerk",
-    "left": "ging weg",
-    "to": "Naar",
-    "status-sent": "Verstuurd",
-    "data": "Data"
+    "wrong-address": "Verkeerde adres",
+    "wrong-contract": "Verkeerde contract",
+    "wrong-keycard-text": "De Keycard waarmee u getikt heeft is niet gelinkt met deze telefoon.",
+    "wrong-keycard-title": "Het lijkt erop dat je met een verkeerde keycard hebt getikt. ",
+    "you-already-have-an-asset": "U hebt al een activum {{value}}",
+    "you-can-change-account": "U kunt de accountnaam en -kleur wijzigen naar keuze.",
+    "you-will-need-this-code": "U heeft deze code nodig om de status te openen en transacties te ondertekenen."
 }
