--- a/translations/pl.json
+++ b/translations/pl.json
@@ -9,17 +9,17 @@
     "add-network": "Dodaj sieć",
     "add-to-contacts": "Dodaj do kontaktów",
     "address": "Adres",
+    "advanced": "Zaawansowane",
     "advanced-settings": "Zaawansowane ustawienia",
     "agree-by-continuing": "Kontynuując, zgadzasz się \nna naszą ",
     "all": "Wszystko",
     "allow": "Pozwól",
     "allowing-authorizes-this-dapp": "Zgadając się, umożliwisz tej aplikacji DApp na pobranie adresu Twojego portfela i uruchomieniu Web3 ",
     "amount": "Kwota",
-    "are-you-sure-description": "Nie będziesz mógł ponownie zobaczyć całej frazy odzyskiwania",
+    "apply": "Zastosuj",
     "are-you-sure?": "Jesteś pewny?",
     "at": "w",
     "available": "Dostępny",
-    "backup-recovery-phrase": "Utwórz kopię frazy odzyskiwania",
     "block": "Blok",
     "bootnode-address": "Adres bootnode'a",
     "bootnode-details": "Szczegóły bootnode'a",
@@ -30,16 +30,15 @@
     "browser-not-secure": "Połączenie nie jest bezpieczne! Nie podpisuj transakcji ani nie przesyłaj danych osobowych na tej stronie.",
     "browser-secure": "Połączenie jest bezpieczne. Upewnij się, że naprawdę ufasz tej stronie przed podpisaniem transakcji lub wprowadzeniem danych osobowych.",
     "browsing-cancel": "Anuluj",
-    "browsing-open-in-status": "Otwórz w Status",
     "browsing-open-in-android-web-browser": "Otwórz w przeglądarce",
     "browsing-open-in-ios-web-browser": "Otwórz w przeglądarce",
+    "browsing-open-in-status": "Otwórz w Status",
     "browsing-site-blocked-description1": "Wykryliśmy potencjalną szkodliwą aktywność z tego adresu. Aby chronić Ciebie i Twój portfel, uniemożliwiamy dalszą nawigację. \n\n Jeśli uważasz, że to błąd, daj nam znać w ",
     "browsing-site-blocked-description2": " czat publiczny.",
     "browsing-site-blocked-go-back": "Wróć",
     "browsing-site-blocked-title": "Ta strona jest zablokowana",
     "browsing-title": "Przeglądaj",
     "camera-access-error": "Aby nadać wymagane uprawnienia dla aparatu, przejdź do ustawień systemowych i upewnij się, że zaznaczono opcję Status > Aparat.",
-    "can-not-add-yourself": "Nie możesz dodać samego siebie",
     "cancel": "Anuluj",
     "change-fleet": "Zmień flotę na {{fleet}}",
     "change-log-level": "Zmień poziom logowania na {{log-level}}",
@@ -49,7 +48,6 @@
     "chat-name": "Nazwa czatu",
     "chat-settings": "Ustawienia czatu",
     "chats": "Czaty",
-    "check-your-recovery-phrase": "Sprawdź własną frazę odzyskiwania",
     "choose-authentication-method": "Wybierz metodę uwierzytelniania, aby chronić swoje konto",
     "clear": "Wyczyść",
     "clear-history": "Wyczyść historię",
@@ -68,8 +66,12 @@
     "connect-mailserver-content": "Połącz z {{name}}?",
     "connected": "Połączono",
     "connecting-requires-login": "Połączenie z inną siecią wymaga logowania",
-    "contact-code": "Kod kontaktowy",
-    "contact-s": "{\"one\":\"kontakt\",\"few\":\"\",\"many\":\"\",\"other\":\"kontakty\"}",
+    "contact-s": {
+        "one": "kontakt",
+        "few": "",
+        "many": "",
+        "other": "kontakty"
+    },
     "contacts": "Kontakty",
     "copy-qr": "Skopiuj kod",
     "copy-transaction-hash": "Skopiuj ID transakcji",
@@ -162,15 +164,34 @@
     "custom": "Niestandardowe",
     "custom-networks": "Własne ustawienia sieci",
     "dapp": "ÐApp",
-    "dapp-would-like-to-connect-wallet": "chciałby \npołączyć się z Twoim portfelem",
     "dapps": "ÐAplikacje",
     "data": "Dane",
     "datetime-ago": "temu",
     "datetime-ago-format": "{{number}} {{time-intervals}} {{ago}}",
-    "datetime-day": "{\"one\":\"dzień\",\"few\":\"\",\"many\":\"\",\"other\":\"dni\"}",
-    "datetime-hour": "{\"one\":\"godzina\",\"few\":\"\",\"many\":\"\",\"other\":\"godziny(y)\"}",
-    "datetime-minute": "{\"one\":\"minuta\",\"few\":\"\",\"many\":\"\",\"other\":\"minut(y)\"}",
-    "datetime-second": "{\"one\":\"sekunda\",\"few\":\"\",\"many\":\"\",\"other\":\"sekund(y)\"}",
+    "datetime-day": {
+        "one": "dzień",
+        "few": "",
+        "many": "",
+        "other": "dni"
+    },
+    "datetime-hour": {
+        "one": "godzina",
+        "few": "",
+        "many": "",
+        "other": "godziny(y)"
+    },
+    "datetime-minute": {
+        "one": "minuta",
+        "few": "",
+        "many": "",
+        "other": "minut(y)"
+    },
+    "datetime-second": {
+        "one": "sekunda",
+        "few": "",
+        "many": "",
+        "other": "sekund(y)"
+    },
     "datetime-today": "dzisiaj",
     "datetime-yesterday": "wczoraj",
     "decryption-failed-content": "Nie udało się odszyfrowanie danych, może być konieczne utworzenie nowego konta i usunięcie starych danych przez naciśnięcie \"Zastosuj\". Naciśnięcie \"Anuluj\" spowoduje ponowienie próby",
@@ -198,8 +219,7 @@
     "edit-profile": "Edytuj profil",
     "empty-chat-description": "W tym czacie nie ma \njeszcze wiadomości",
     "empty-chat-description-one-to-one": "Wszystkie wysyłane tutaj wiadomości są szyfrowane i mogą być odczytane tylko przez Ciebie i ",
-    "enter-12-words": "Wpisz 12 słów swojej frazy odzyskiwania, oddzielonych pojedynczymi spacjami.",
-    "enter-contact-code": "Wprowadź kod kontaktowy lub nazwę użytkownika",
+    "enter-address": "Wprowadź adres",
     "enter-password": "Wprowadź hasło",
     "enter-url": "Wprowadź adres URL",
     "enter-word": "Wprowadź słowo",
@@ -240,14 +260,14 @@
         "str",
         "Przepraszamy, kod jest nieprawidłowy. Prosimy wprowadzić kod ponownie"
     ],
-    "install": "Instaluj",
     "intro-message1": "Witamy w sekcji Status\nWybierz tę wiadomość, aby ustawić hasło i rozpocząć!",
     "intro-text": "Status daje dostęp do zdecentralizowanej sieci",
     "invalid-key-confirm": "Zastosuj",
-    "invalid-key-content": "Aby się chronić, musisz utworzyć nowe konto i usunąć stare dane, klikając \"Zastosuj\". Jeśli masz już konto i chcesz je zachować, wybierz \"Anuluj\", zrób kopię zapasową i uruchom ponownie aplikację. Zdecydowanie zalecamy utworzenie nowego konta, ponieważ stare jest przechowywane jako niezaszyfrowane.",
     "invalid-number": "Nieprawidłowy numer",
     "invite-friends": "Zaproś znajomych",
     "invited": "zaproszeni",
+    "keycard-connected-title": "Połączono",
+    "keycard-success-title": "Powodzenie",
     "leave": "Opuść",
     "leave-group": "Opuść grupę",
     "left": "pozostało",
@@ -260,12 +280,23 @@
     "mailserver-connection-error": "Nie udało się połączyć z mailserver'em",
     "mailserver-details": "Szczegóły mailserver'a",
     "mailserver-reconnect": "Nie udało się połączyć z mailserver'em. Kliknij aby ponowić",
+    "mailserver-title": "Mailserver",
     "main-currency": "Główna waluta",
     "main-networks": "Główne sieci",
     "main-wallet": "Portfel główny",
     "mainnet-network": "Sieć główna",
-    "members": "{\"one\":\"1 użytkownik\",\"few\":\"\",\"many\":\"\",\"other\":\"Użytkownicy: {{count}}\"}",
-    "members-active": "{\"one\":\"1 członek\",\"few\":\"\",\"many\":\"\",\"other\":\"{{count}} członków\"}",
+    "members": {
+        "one": "1 użytkownik",
+        "few": "",
+        "many": "",
+        "other": "Użytkownicy: {{count}}"
+    },
+    "members-active": {
+        "one": "1 członek",
+        "few": "",
+        "many": "",
+        "other": "{{count}} członków"
+    },
     "members-active-none": "bez członków",
     "members-title": "Użytkownicy",
     "message": "Wiadomość",
@@ -298,8 +329,6 @@
     "offline": "Offline",
     "offline-messaging": "Mailserver",
     "offline-messaging-settings": "Ustawienia mailserver'a",
-    "ok-continue": "Ok, kontynuuj",
-    "ok-got-it": "Ok, rozumiem",
     "on": "Wł.",
     "open": "Otwórz",
     "open-dapp": "Otwórz ÐAplikację",
@@ -308,14 +337,12 @@
     "passphrase": "Hasło specjalne",
     "password": "Hasło",
     "password_error1": "Hasła nie pasują do siebie.",
-    "password-description": "Hasło to będzie potrzebne do otwierania aplikacji i potwierdzania transakcji.",
     "password-placeholder2": "Potwierdź hasło",
     "paste-json": "Wklej JSON",
     "pending": "W oczekiwaniu",
     "permissions": "Uprawnienia",
     "phone-e164": "Międzynarodowy 1",
     "photos-access-error": "Aby nadać wymagane uprawnienia do zdjęć, przejdź do ustawień systemowych i upewnij się, że zaznaczono opcję Status > Zdjęcia.",
-    "privacy-policy": "Polityka Prywatności",
     "profile": "Profil",
     "public-chat": "Czat publiczny",
     "public-chats": "Czaty publiczne",
@@ -329,14 +356,13 @@
     "recipient": "Odbiorca",
     "recipient-code": "Wprowadź adres odbiorcy",
     "recover": "Odzyskaj",
-    "recovery-confirm-phrase": "Potwierdź frazę",
-    "recovery-phrase": "Fraza odzyskiwania",
     "recovery-typo-dialog-description": "Jeśli wpiszesz niewłaściwe słowa, utworzysz nowe konto zamiast odzyskiwania starego.",
-    "recovery-typo-dialog-title": "Czy fraza jest prawidłowa?",
     "remove": "Usuń",
     "remove-from-chat": "Usuń z czatu",
+    "remove-from-contacts": "Usuń z kontaktów",
     "remove-network": "Usuń sieć",
     "removed": "usunięci",
+    "request-feature": "Poproś o funkcję",
     "request-transaction": "Poproś o transakcję",
     "required-field": "Pole wymagane",
     "resend-message": "Wyślij ponownie",
@@ -354,20 +380,17 @@
     "send-request-amount": "Kwota",
     "send-request-amount-max-decimals": "Maks. liczba miejsc po przecinku to {{asset-decimals}}",
     "send-request-unknown-token": "Nieznany token - {{asset}}",
-    "send-sending-to": "do ",
     "send-transaction": "Wyślij transakcję",
     "sent-at": "Wyslano w",
     "set-a-topic": "Utwórz temat",
     "settings": "Ustawienia",
     "share": "Udostępnij",
-    "share-contact-code": "Udostępnij mój kod kontaktowy",
     "sharing-copied-to-clipboard": "Skopiowane do schowka",
     "sharing-copy-to-clipboard": "Skopiuj do schowka",
     "sharing-share": "Udostępnij...",
     "show-less": "Pokaż mniej",
     "show-more": "Pokaż więcej",
     "show-qr": "Pokaż QR",
-    "sign-in": "Zaloguj się",
     "sign-message": "Podpisz wiadomość",
     "sign-you-in": "Logujemy Cię…",
     "soon": "Wkrótce",
@@ -381,8 +404,8 @@
     "status": "Status",
     "status-confirmed": "Potwierdzone",
     "status-hardwallet": "Status hardwallet",
-    "status-not-sent-tap": "Nie wysłano. Dotknij aby zobaczyć opcje",
     "status-not-sent-click": "Nie wysłano. Dotknij aby zobaczyć opcje",
+    "status-not-sent-tap": "Nie wysłano. Dotknij aby zobaczyć opcje",
     "status-pending": "W oczekiwaniu",
     "status-sent": "Wysłano",
     "status-tx-not-found": "Nie znaleziono TX",
@@ -394,7 +417,6 @@
     "test-networks": "Sieci testowe",
     "text-input-disabled": "Proszę poczekać chwilę…",
     "to": "Do",
-    "topic-name-error": "Nazwy tematów używają tylko małych liter (od a do z) i myślników (-)",
     "transaction": "Transakcja",
     "transaction-description": "Transakcje z 12 potwierdzeniami można uznać za nieodwracalne",
     "transaction-details": "Szczegóły transakcji",
@@ -405,37 +427,32 @@
     "transactions": "Transakcje",
     "transactions-filter-select-all": "Zaznacz wszystko",
     "transactions-filter-title": "Filtruj",
-    "type": "Rodzaj",
     "transactions-history": "Historia transakcji",
     "transactions-history-empty": "Brak transakcji w Twojej historii",
     "transactions-sign": "Podpisz",
     "turn-nfc-on": "Włącz NFC",
+    "type": "Rodzaj",
     "type-a-message": "Wpisz wiadomość...",
     "unable-to-read-this-code": "Nie można odczytać tego kodu",
     "unknown-status-go-error": "Nieznany błąd status-go",
     "url": "URL",
     "usd-currency": "USD",
-    "use-valid-contact-code": "Wprowadź lub zeskanuj poprawny kod kontaktowy lub nazwę użytkownika",
     "validation-amount-invalid-number": "Kwota nie jest prawidłową liczbą",
     "validation-amount-is-too-precise": "Kwota jest zbyt dokładna. Maksymalna liczba miejsc po przecinku wynosi {{decimals}}.",
-    "version": "Wersja",
     "view-cryptokitties": "Zobacz w CryptoKitties",
     "view-cryptostrikers": "Zobacz w CryptoStrikers",
     "view-etheremon": "Zobacz w Etheremon",
     "view-profile": "Zobacz profil",
     "view-superrare": "Zobacz w SuperRare",
     "wallet": "Portfel",
-    "advanced": "Zaawansowane",
     "wallet-asset": "Aktywo",
     "wallet-assets": "Aktywa",
-    "wallet-backup-recovery-title": "Utwórz kopię zapasową frazy",
     "wallet-choose-recipient": "Wybierz Odbiorcę",
     "wallet-collectibles": "Kolekcje",
     "wallet-insufficient-funds": "Niewystarczające środki",
     "wallet-insufficient-gas": "Za mało ETH żeby zapłacić za gas",
     "wallet-invalid-address": "Błędny adres: \n{{data}}",
     "wallet-invalid-chain-id": "Typ sieci nie pasuje do:\n {{data}}. Aktualny łańcuch: {{chain}}.",
-    "wallet-manage-assets": "Zarządzaj aktywami",
     "wallet-request": "Prośba",
     "wallet-send": "Wyślij",
     "wallet-send-min-wei": "Min 1 wei",
@@ -445,19 +462,10 @@
     "wants-to-access-profile": "chce uzyskać dostęp do Twojego profilu",
     "warning-message": "Niestety, ograniczamy wysyłanie kilku wiadomości w krótkich odstępach czasu, aby zapobiec spamowi. Spróbuj ponownie za chwilę",
     "web-view-error": "Nie można załadować strony",
-    "welcome-to-status": "Witamy w Status",
-    "welcome-to-status-description": "Naciśnij przycisk (+), aby rozpocząć",
     "word-n": "Słowo #{{number}}",
-    "word-n-description": "Aby sprawdzić, czy poprawnie zapisałeś kopię zapasową swojej frazy odzyskiwania, wprowadź słowo #{{number}} powyżej.",
     "wrong-password": "Nieprawidłowe hasło",
     "wrong-word": "Złe słowo",
     "yes": "Tak",
     "You": "Ty",
-    "you-are-all-set": "Wszystko gotowe!",
-    "you-are-all-set-description": "Teraz, jeśli zgubisz telefon, możesz odzyskać swoje konto i portfel używając frazy odzyskiwania.",
-    "your-contact-code": "Przyznanie dostępu umożliwi tej aplikacji DApp na pobranie Twojego kodu kontaktu",
-    "your-data-belongs-to-you": "W przypadku zagubienia frazy odzyskiwania utracisz swoje dane i środki",
-    "your-data-belongs-to-you-description": "Status nie może pomóc w odzyskaniu konta, jeśli utracisz frazę odzyskiwania. Odpowiadasz za bezpieczeństwo swoich danych, a najlepszym zabezpieczeniem jest kopia zapasowa frazy.",
-    "your-recovery-phrase": "Twoja fraza odzyskiwania",
-    "your-recovery-phrase-description": "To jest Twoja fraza odzyskiwania. Używasz jej, aby udowodnić, że to Twój portfel. Możesz ją zobaczyć tylko raz! Zapisz ją na papierze i przechowuj w bezpiecznym miejscu. Będzie ona potrzebna, jeśli stracisz lub ponownie zainstalujesz Twój portfel."
+    "you-are-all-set": "Wszystko gotowe!"
 }
