--- a/translations/th.json
+++ b/translations/th.json
@@ -1,127 +1,110 @@
 {
-    "confirm": "ยืนยัน",
-    "amount": "จำนวน",
-    "members-active": {
-        "one": "1 สมาชิก, 1 ใช้งานอยู่",
-        "other": "{{count}} สมาชิก, {{count}} ใช้งานอยู่",
-        "zero": "ไม่มีสมาชิก"
-    },
-    "chat-name": "ชื่อแชท",
-    "phew-here-is-your-passphrase": "*โล่งอกไปที* มันไม่ง่ายเลย นี่คือวลีรหัสผ่านของคุณ *จดมันไว้และรักษามันให้ปลอดภัย!* คุณจะจำเป็นต้องใช้มันเพื่อกู้คืนบัญชีของคุณ",
-    "public-group-topic": "หัวข้อ",
-    "chat-settings": "การตั้งค่าแชท",
-    "offline": "ออฟไลน์",
-    "invited": "เชิญแล้ว",
-    "address": "ที่อยู่",
-    "new-public-group-chat": "เข้าร่วมแชทสาธารณะ",
-    "datetime-hour": {
-        "one": "ชั่วโมง",
-        "other": "ชั่วโมง"
-    },
-    "datetime-ago-format": "{{number}} {{time-intervals}} {{ago}}",
-    "remove": "ลบ",
-    "add-members": "เพิ่มสมาชิก",
-    "done": "เสร็จสิ้น",
-    "delete-chat": "ลบแชท",
-    "new-group-chat": "แชทกลุ่มใหม่",
-    "sign-in": "ลงชื่อเข้าใช้",
-    "datetime-yesterday": "เมื่อวาน",
-    "create-new-account": "สร้างบัญชีใหม่",
-    "datetime-ago": "ที่ผ่านมา",
-    "contacts": "ผู้ติดต่อ",
-    "got-it": "เข้าใจแล้ว",
-    "active-online": "ออนไลน์",
-    "password": "รหัสผ่าน",
-    "browsing-title": "เบราว์",
-    "discover": "การค้นพบ",
-    "browsing-cancel": "ยกเลิก",
-    "intro-status": "แชทกับฉันเพื่อตั้งค่าบัญชีของคุณและเปลี่ยนการตั้งค่าของคุณ!",
-    "name": "ชื่อ",
-    "show-qr": "แสดง QR",
-    "connect": "เชื่อมต่อ",
-    "edit": "แก้ไข",
-    "account-generation-message": "ให้เวลาฉันหนึ่งวินาที ฉันจะต้องคำนวณอย่างหนักเพื่อสร้างบัญชีของคุณ!",
-    "no-messages": "ไม่มีข้อความ",
-    "passphrase": "วลีรหัสผ่าน",
-    "recipient": "ผู้รับ",
-    "members-title": "สมาชิก",
-    "new-group": "กลุ่มใหม่",
-    "phone-e164": "ระหว่างประเทศ 1",
-    "settings": "การตั้งค่า",
-    "chats": "แชท",
-    "transaction": "การทำธุรกรรม",
-    "public-group-status": "สาธารณะ",
-    "image-source-make-photo": "ถ่ายภาพ",
-    "start-conversation": "เริ่มการสนทนา",
-    "save": "บันทึก",
-    "sharing-copy-to-clipboard": "คัดลอกไปยังคลิปบอร์ด",
-    "sync-in-progress": "กำลังซิงค์...",
-    "send-transaction": "ส่งการทำธุรกรรม",
-    "incorrect-code": [
-        "str",
-        "ขออภัย รหัสไม่ถูกต้อง โปรดกรอกอีกครั้ง"
-    ],
-    "image-source-gallery": "เลือกจากแกลเลอรี",
-    "sync-synced": "ระหว่างการซิงค์",
-    "status-pending": "อยู่ระหว่างดำเนินการ",
-    "datetime-day": {
-        "one": "วัน",
-        "other": "วัน"
-    },
-    "scan-qr": "สแกน QR",
-    "contact-s": {
-        "one": "รายชื่อติดต่อ",
-        "other": "รายชื่อติดต่อ"
-    },
-    "next": "ถัดไป",
-    "recent": "เมื่อเร็ว ๆ นี้",
-    "status": "สถานะ",
-    "from": "จาก",
-    "wrong-password": "รหัสผ่านไม่ถูกต้อง",
-    "in-contacts": "ในรายชื่อติดต่อ",
-    "sharing-share": "แชร์...",
-    "type-a-message": "พิมพ์ข้อความ...",
-    "clear-history": "ลบประวัติ",
-    "no-contacts": "ยังไม่มีผู้ติดต่อ",
-    "datetime-today": "วันนี้",
-    "web-view-error": "อุ๊ย มีข้อผิดพลาด",
-    "error": "ข้อผิดพลาด",
-    "more": "เพิ่มเติม",
-    "cancel": "ยกเลิก",
-    "can-not-add-yourself": "คุณไม่สามารถเพิ่มตัวคุณเอง",
-    "add-to-contacts": "เพิ่มไปยังผู้ติดต่อ",
-    "available": "มีให้ใช้ได้",
-    "You": "คุณ",
-    "main-wallet": "กระเป๋าเงินหลัก",
-    "members": {
-        "one": "1 สมาชิก",
-        "other": "{{count}} สมาชิก",
-        "zero": "ไม่มีสมาชิก"
-    },
-    "intro-message1": "ยินดีต้อนรับสู่สถานะ \n แตะข้อความนี้เพื่อตั้งรหัสผ่านของคุณ & เริ่มต้น!",
-    "new-contact": "ผู้ติดต่อใหม่",
-    "datetime-second": {
-        "one": "วินาที",
-        "other": "วินาที"
-    },
-    "recover": "กู้คืน",
-    "datetime-minute": {
-        "one": "นาที",
-        "other": "นาที"
-    },
-    "browsing-open-in-android-web-browser": "เปิดในเว็บเบราว์เซอร์",
-    "browsing-open-in-ios-web-browser": "เปิดในเว็บเบราว์เซอร์",
-    "edit-profile": "แก้ไขโปรไฟล์",
-    "active-unknown": "ไม่ทราบ",
-    "public-key": "คีย์สาธารณะ",
-    "profile": "โปรไฟล์",
-    "none": "ไม่มี",
-    "removed": "ลบแล้ว",
-    "message": "ข้อความ",
-    "here-is-your-passphrase": "นี่คือวลีรหัสผ่านของคุณ *จดมันไว้และรักษามันให้ปลอดภัย!* คุณจะจำเป็นต้องใช้มันเพื่อกู้คืนบัญชีของคุณ",
-    "image-source-title": "รูปโปรไฟล์",
-    "left": "ออกไปแล้ว",
-    "to": "ถึง",
-    "status-sent": "ส่งแล้ว",
-    "data": "ข้อมูล"
+    "accept-and-share-address": "ยอมรับและแชร์ Address",
+    "account-exists-title": "บัญชีมีอยู่แล้ว",
+    "add-private-key-account": "เพิ่มบัญชีจาก Private key",
+    "add-seed-account": "เพิ่มบัญชีด้วย Seed phrase",
+    "address-received": "Address ผู้รับ",
+    "balance": "คงเหลือ",
+    "biometric-disable-bioauth": "ปิดการใช้งาน {{bio-type-label}}",
+    "biometric-disable-password-title": "ปิดใช้งานการบันทึกรหัสผ่าน",
+    "cant-report-bug": "ไม่สามารถรายงานข้อผิดพลาดได้",
+    "check-on-etherscan": "ตรวจสอบใน etherscan",
+    "clear-all": "ลบทั้งหมด",
+    "custom-seed-phrase-text-2": "ว่าง",
+    "decimals": "ทศนิยม",
+    "decline": "ยกเลิก",
+    "default": "ค่าเริ่มต้น",
+    "delete-account": "สร้างบัญชี",
+    "delete-and-leave-group": "ลบและออกจากกลุ่ม",
+    "delete-my-account": "ลบบัญชีของฉัน",
+    "dev-mode-settings": "การตั้งค่าโหมดการพัฒนา",
+    "ens-10-SNT": "10 SNT",
+    "ens-add-username": "เพิ่มชื่อผู้ใช้",
+    "ens-custom-username-taken": "ชื่อผู้ใช้ไม่ได้เป็นของคุณ :(",
+    "ens-deposit": "เงินฝาก",
+    "ens-got-it": "ตกลงเข้าใจแล้ว",
+    "ens-name-title": "ชื่อ ENS",
+    "ens-register": "ลงทะเบียน",
+    "ens-registration-failed-title": "การทำธุรกรรมล้มเหลว",
+    "ens-remove-username": "ลบชื่อผู้ใช้",
+    "ens-saved-title": "เพิ่มชื่อผู้ใช้แล้ว",
+    "ens-test-message": "เฮ้",
+    "ens-username-owned": "✓ชื่อผู้ใช้เป็นของคุณอยู่แล้ว",
+    "ens-username-taken": "ชื่อผู้ใช้ถูกใช้ไปแล้ว :(",
+    "ens-usernames": "ชื่อผู้ใช้ ENS",
+    "ens-welcome-point-2-title": "10 SNT สำหรับลงทะเบียน",
+    "ens-your-username": "ชื่อผู้ใช้ของคุณ",
+    "ens-your-your-name": "ENS ของคุณ",
+    "enter-watch-account-address": "สแกน QR code\nหรือ\nป้อน Address เพิ่มดู",
+    "enter-your-password": "ป้อนรหัสผ่านของคุณ",
+    "export-account": "ส่งออกบัญชี",
+    "free": "↓ฟรี",
+    "generate-an-account": "สร้างบัญชี",
+    "history": "ประวัติ",
+    "incoming-transaction": "ธุรกรรมขาเข้า",
+    "intro-privacy-policy-note2": "นโยบายความเป็นส่วนตัว",
+    "intro-title3": "Decentralized แอป",
+    "intro-wizard-text4": "รักษาความปลอดภัยและเข้ารหัสคีย์ของคุณ",
+    "intro-wizard-text6": "Status จะแจ้งให้คุณทราบเกี่ยวกับข้อความใหม่ คุณสามารถแก้ไขการตั้งค่าการแจ้งเตือนภายหลังในการตั้งค่า",
+    "intro-wizard-title-alt4": "สร้างรหัสผ่าน",
+    "intro-wizard-title-alt5": "ยืนยันรหัสผ่านของคุณ",
+    "intro-wizard-title1": "รับคีย์ของคุณ",
+    "intro-wizard-title2": "เลือกชื่อแชท",
+    "intro-wizard-title4": "สร้างรหัสผ่าน 6 หลัก",
+    "intro-wizard-title5": "ยืนยันรหัสผ่าน",
+    "intro-wizard-title6": "เปิดใช้งานการแจ้งเตือน",
+    "key": "คีย์",
+    "keycard-awaiting-title": "กำลังมองหา...",
+    "keycard-connected-title": "เชื่อมต่อ",
+    "keycard-error-description": "เชื่อมต่อบัตรอีกครั้งเพื่อดำเนินการต่อ",
+    "keycard-error-title": "การเชื่อมต่อล้มเหลว",
+    "keycard-onboarding-intro-header": "เก็บคีย์ของคุณไว้ใน Keycard",
+    "keycard-onboarding-start-step1": "สร้างรหัสผ่าน 6 หลัก",
+    "keycard-processing-title": "กำลังประมวลผล...",
+    "keycard-success-title": "สำเร็จ",
+    "language": "ภาษา",
+    "learn-more-about-keycard": "เรียนรู้เพิ่มเติมเกี่ยวกับ Keycard",
+    "les-ulc": "LES\/ULC",
+    "load-messages-before": "ก่อน {{date}}",
+    "mail-should-be-configured": "ควรกำหนดค่าเมลไคลเอ็นต์",
+    "mark-all-read": "ทำเครื่องหมายอ่านทั้งหมด",
+    "mobile-network-go-to-settings": "ไปยังการตั้งค่า",
+    "mobile-network-sheet-settings": "การตั้งค่า",
+    "mobile-network-start-syncing": "เริ่มการซิงค์",
+    "mobile-network-stop-syncing": "หยุดการซิงค์",
+    "node-version": "เวอร์ชันโหนด",
+    "ok-save-pass": "ตกลงบันทึกรหัสผ่าน",
+    "open-nfc-settings": "เปิดการตั้งค่า NFC",
+    "outgoing-transaction": "ธุรกรรมขาออก",
+    "paste": "วาง",
+    "privacy": "ความเป็นส่วนตัว",
+    "private-key": "Private key",
+    "processing": "รอสักครู่",
+    "quiet-days": "{{quiet-days}} วัน",
+    "quiet-hours": "{{quiet-hours}} ชั่วโมง",
+    "retry": "ลองใหม่",
+    "security": "ความปลอดภัย",
+    "select": "เลือก",
+    "select-account": "เลือกบัญชี",
+    "select-account-first": "เลือกบัญชีก่อน",
+    "set-currency": "ตั้งค่าสกุลเงินเริ่มต้น",
+    "share-address": "แชร์ Address",
+    "share-profile": "แชร์โปรไฟล์",
+    "shared": "แชร์",
+    "sign-and-send": "ลงชื่อและส่ง",
+    "sign-out": "ออกจากระบบ",
+    "sign-with": "ลงชื่อด้วย",
+    "submit": "ตกลง",
+    "symbol": "ตัวย่อ",
+    "sync-settings": "การตั้งค่าการซิงค์",
+    "this-device": "อุปกรณ์นี้",
+    "transactions-load-more": "โหลดเพิ่มเติม",
+    "turn-nfc-description": "NFC ปิดการใช้งานอยู่ คุณสามารถเปิดใช้งานได้ในการตั้งค่า",
+    "ulc-enabled": "ULC ที่เปิดใช้งาน",
+    "unlock": "ปลดล็อค",
+    "user-not-found": "ไม่พบชื่อผู้ใช้",
+    "waiting-for-wifi-change": "เปลี่ยน",
+    "watch-only": "ดูอย่างเดียว",
+    "wrong-address": "Address ไม่ถูกต้อง",
+    "your-keys": "คีย์ของคุณ"
 }
